Add travel guides for Cyprus and personal reflections as a digital nomad
- Created two new posts: "Cyprus: Winter Getaway Guide" and "Cyprus: The Other Side of The Island" detailing travel experiences and insights.
- Added a personal reflection post titled "My Year as a Digital Nomad" summarizing travels and experiences throughout the year.
- Updated index pages for English and Russian versions to enable pagination.
- Implemented language switcher for easy navigation between English and Russian content.
- Added JavaScript for automatic language redirection based on user browser settings.

--- a/_i18n/en/_posts/2020-05-12-germania-75.markdown
+++ b/_i18n/en/_posts/2020-05-12-germania-75.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Германия в 75 кадрах
+title: "Germany: 75 Shots 75 Years Later"
 date: '2020-05-12 10:40:21'
 tags:
 - travel
@@ -9,139 +9,139 @@ tags:
 image: /assets/images/2020/05/DSCF2908.jpg
 ---
 
-Вторая Мировая закончилась 75 лет назад. Эту страшную историю нельзя забывать. А ещё нельзя на ней зацикливаться. Сегодня я покажу 75 фото и расскажу несколько истории из своих поездок по «проигравшей стране».
+The Second World War ended 75 years ago. This terrible history must never be forgotten. But we also shouldn’t get stuck in it. Today, I’ll share 75 photos and tell a few stories from my trips through the country that lost and won at the same time.
 
 ![](/assets/images/2020/05/DSCF2908.jpg)
 
-Внутри — Берлин, Мюнхен, Франкфурт, Нюрнберг, Дрезден, сказочный замок Нойшванштайн и один из самых страшных концлагерей в Дахау.
+Let’s visit Berlin, Munich, Frankfurt, Nuremberg, Dresden, the fairy-tale Neuschwanstein Castle, and one of the most horrifying concentration camps in Dachau.
 
-## Берлин
-После первого визита в 2012 году я написал о Берлине два больших поста. Тогда столица Германии показалась грязной и враждебной, но атмосфера и артефакты новейшей истории очень впечатлили. Я привёз кучу фотографий рейхстага, Берлинской стены, муралов и мемориалов, которые до сих пор интересно пересматривать.
+## Berlin
+During my first visit in 2012, Germany’s capital seemed dirty and hostile, but the atmosphere and artifacts of recent history left a strong impression. I brought back tons of photos of the Reichstag, the Berlin Wall, murals, and memorials that I still enjoy looking at.
 
-<ul><li><a href="../berlin-tt/index.html">Первые впечатления о Берлине</a></li><li><a href="../berlin-sights/index.html">Достопримечательности Берлина</a></li></ul>За последние два года я возвращался в Берлин трижды, разглядел город с других сторон и сильно поменял своё отношение. Сегодня он кажется мне одним из самых уютных, комфортных и интересных мест в Европе, где каждый найдёт себе лайфстайл и досуг по душе.
+Over the past two years, I’ve returned to Berlin three times, seeing the city from different angles and changing my feelings about it a lot. Today, it feels like one of the coziest, most comfortable, and interesting places in Europe, where everyone can find a lifestyle and leisure to their liking.
 
 ![](/assets/images/2020/05/DSCF3085.jpg)
 
-Город довольно чётко зонирован. Есть районы, где не прекращается дикая тусовка, спокойные спальники для мидл-класса, рабочие окраины и тонна классных общественных пространств, которые объединяют этих разных персонажей без ощутимого расслоения.
+The city is quite clearly zoned. There are areas with non-stop wild parties, quiet suburbs for the middle class, working-class outskirts, and tons of cool public spaces that bring these very different characters together without noticeable segregation.
 
 ![](/assets/images/2020/05/DSCF3037.jpg)
 ![](/assets/images/2020/05/DSCF3135.jpg)
 - ![](/assets/images/2020/05/DSCF3132.jpg)
 - ![](/assets/images/2020/05/DSCF3144.jpg)
 
-В Берлине сохранилось не так много предметов древности, но их место заняла неповторимая атмосфера бывшего демаркационного города, объекты современного искусства, постоянные культурные ивенты, ощущение полной свободы и вечного творческого балагана.
+Berlin doesn’t have many ancient artifacts left, but it has an unmistakable atmosphere of a former divided city, contemporary art objects, constant cultural events, a sense of total freedom, and a perpetual creative mess.
 
 ![](/assets/images/2020/05/DSCF9285.jpg)
 - ![](/assets/images/2020/05/DSCF9310.jpg)
 - ![](/assets/images/2020/05/DSCF9306.jpg)
 
-Отлично спланированная городская среда делает пешие шпацеры приятным рекреационным занятием. Берлин — огромный город, но в отличие от Москвы он не давит перегруженной транспортной системой и тиранией стеклобетонного необрутализма.
+The well-planned urban environment makes walking a pleasant recreational activity. Berlin is huge, but unlike Moscow, it doesn’t weigh you down with an overloaded transport system or the tyranny of glass-and-concrete brutalism.
 
 ![](/assets/images/2020/05/DSCF3118.jpg)
 
-Даже доставшиеся в наследство от ГДР панельные трущобы выглядят почти пасторально благодаря годной реновации, щедрому озеленению и строгому дизайн-коду. Хотя окрестности Александрплац и другие случайные места до сих пор смотрятся угрюмо и неприветливо.
+Even the panel-block neighborhoods inherited from the GDR look almost pastoral thanks to decent renovations, generous greenery, and a strict design code. Although the surroundings of Alexanderplatz and some random spots still feel gloomy and unwelcoming.
 
 ![](/assets/images/2020/05/DSCF2997.jpg)
 ![](/assets/images/2020/05/DSCF3030.jpg)
 
-Я убеждён, что Берлин — это город, которым может стать столица России, если её избавить от категорического императива личного автотранспорта и отдать гранитные просторы людям, которые смогут сделать их уютными и по-настоящему общественными.
+I’m convinced that Berlin is the kind of city Russia’s capital could become if it were freed from the absolute imperative private wehicles and gave its granite spaces back to the people who could make them cozy and truly public.
 
 ![](/assets/images/2020/05/DSCF3083.jpg)
 ![](/assets/images/2020/05/DSCF3097.jpg)
 ![](/assets/images/2020/05/DSCF3199.jpg)
 ![](/assets/images/2020/05/DSCF9304.jpg)
 
-Дерзну сказать, что нынешний Берлин — это парк Горького вместе с набережной Музеона и арт-пространством, вроде Флакона. Только всё это — в масштабах целого города и с лёгким ароматом джоинта.
+I dare say that today’s Berlin is like Gorky Park combined with Moscow’s Muzeon embankment and art spaces like Flakon — only scaled up to the size of a whole city, with a slight scent of a joint in the air.
 
-## Мюнхен
-Столица Баварии, родина Октоберфеста, третий миллионник страны, столица немецкого технологического сектора, самый дорогой и комфортный мегаполис в Германии. Я побывал здесь дважды — весной 2013 и летом 2018. Оба раза — с огромным удовольствием.
+## Munich
+The capital of Bavaria, birthplace of Oktoberfest, Germany’s third city over a million, home to the country’s tech sector, and its most expensive and comfortable metropolis. I visited twice — spring 2013 and summer 2018 — both times with huge pleasure.
 
 ![](/assets/images/2020/05/IMG_7581.jpg)
 
-История Мюнхена началась в VIII веке с небольшого поселения монахов, откуда и появилось название города и его легендарные пивоваренные традиции. А ещё в Мюнхене началось восхождение печально известной партии НСДАП имени австрийца Адольфа Гитлера.
+Munich’s history began in the 8th century with a small monk settlement — the origin of the city’s name and its legendary brewing traditions. Also here began the rise of the infamous NSDAP party under the Austrian Adolf Hitler.
 
 ![](/assets/images/2020/05/IMG_5775.jpg)
 
-Во время Второй Мировой исторический центр города был полностью уничтожен. Однако план его восстановления был самым педантичным и консервативным, поэтому все здания и даже планировка улиц были воссозданы практически в неизменном довоенном виде.
+During WWII, the historic city center was completely destroyed. However, the reconstruction plan was the most meticulous and conservative, so all buildings and even street layouts were restored almost exactly as they were before the war.
 
 ![](/assets/images/2020/05/IMG_0140.jpg)
 
-Поэтому в Мюнхене, в отличие от Берлина, можно найти много интересной старой архитектуры. Город ощущается более помпезным и «европейским». До того уровня, когда вся эта меланхолическая красота погружает тебя в тихий летаргический сон.
+That’s why Munich, unlike Berlin, still has lots of interesting old architecture. The city feels more pompous and “European.” To the point that this melancholic beauty can lull you into a quiet lethargic sleep.
 
 ![](/assets/images/2020/05/DSCF2659.jpg)
 ![](/assets/images/2020/05/IMG_5685.jpg)
 ![](/assets/images/2020/05/IMG_5727.jpg)
 ![](/assets/images/2020/05/IMG_5673.jpg)
 
-В послевоенные десятилетия Мюнхен стал крупным центром науки и образования, постепенно превратился в немецкую Кремниевую долину и теперь постоянно попадает в мировую десятку городов с самым высоким качеством жизни (и в другие почётные рейтинги).
+In the postwar decades, Munich became a major center for science and education, gradually turning into Germany’s Silicon Valley, and now regularly ranks in the global top ten cities for quality of life (and other honorable lists).
 
 ![](/assets/images/2020/05/IMG_5699-1.jpg)
 
-Город стоит на реке Изар, берега которой плотно облеплены чудесными променадами с восхитительными скульптурными группами и обелисками. По Мюнхену очень приятно гулять и перемещаться на велосипеде. Автотранспорта в центре города немного.
+The city sits on the Isar River, whose banks are densely covered with wonderful promenades adorned with delightful sculptures and obelisks. It’s very pleasant to walk or bike around Munich. There’s little car traffic in the city center.
 
-Самое крутое место в городе — <a href="https://goo.gl/maps/tcSjhgkYtMhG1fds8?ref=shouldgo.me">Энглишер Гартен</a> — Английский сад. Это один из крупнейших городских парков в мире — больше нью-йоркского Централ-парка и лондонского Гайд-парка. Как и любой английский сад — это симбиоз природы и ландшафтного дизайна.
+The coolest place in the city is the [Englischer Garten](https://goo.gl/maps/tcSjhgkYtMhG1fds8?ref=shouldgo.me) — the English Garden. It’s one of the largest urban parks in the world — bigger than New York’s Central Park and London’s Hyde Park. Like any English garden, it’s a blend of nature and landscape design.
 
 ![](/assets/images/2020/05/DSCF2674.jpg)
 ![](/assets/images/2020/05/DSCF2680.jpg)
 
-В одном углу парка есть прекрасное кафе <a href="https://goo.gl/maps/Zorv5CJVeoWQcU9P9?ref=shouldgo.me">Milchhausl</a>, где летом наливают холодное пиво, а зимой — горячий глювайн. В другом углу — искусственная <a href="https://goo.gl/maps/o1sw2FhDVePzt2Sq7?ref=shouldgo.me">волна для сёрфинга</a> (без платы за пользование). Всё остальное — огромная поляна с живописными видами и каналами.
+In one corner of the park, there’s a lovely café called [Milchhausl](https://goo.gl/maps/Zorv5CJVeoWQcU9P9?ref=shouldgo.me), where they serve cold beer in summer and hot glühwein in winter. In another corner, there’s an artificial [surf wave](https://goo.gl/maps/o1sw2FhDVePzt2Sq7?ref=shouldgo.me) (free to use). The rest is a huge meadow with picturesque views and canals.
 
 ![](/assets/images/2020/05/DSCF2738.jpg)
 ![](/assets/images/2020/05/DSCF2739.jpg)
 ![](/assets/images/2020/05/IMG_0112.jpg)
 ![](/assets/images/2020/05/IMG_6962.jpg)
 
-Есть куча других классных мест: готичная <a href="https://goo.gl/maps/Wt51EG8KdgnoKQ7p7?ref=shouldgo.me">Мариенплац</a>, <a href="https://goo.gl/maps/kUjHoJ3yjAhZWC5FA?ref=shouldgo.me">олимпийский парк</a>, <a href="https://goo.gl/maps/UuGL7T6XhyiG7hq88?ref=shouldgo.me">музей БМВ</a>, <a href="https://goo.gl/maps/F8kG1d4sXMSQp1D6A?ref=shouldgo.me">луг Терезы</a> с огромным монументом Баварии. Есть тусовочные кварталы (и ночные пати-автобусы) и просто улицы, по которым бесконечно приятно гулять.
+There are tons of other great spots: the gothic [Marienplatz](https://goo.gl/maps/Wt51EG8KdgnoKQ7p7?ref=shouldgo.me), [Olympic Park](https://goo.gl/maps/kUjHoJ3yjAhZWC5FA?ref=shouldgo.me), [BMW Museum](https://goo.gl/maps/UuGL7T6XhyiG7hq88?ref=shouldgo.me), [Theresienwiese](https://goo.gl/maps/F8kG1d4sXMSQp1D6A?ref=shouldgo.me) with the huge Bavaria monument. There are nightlife neighborhoods (and night party buses) and simply streets that are endlessly pleasant to stroll.
 
 ![](/assets/images/2020/05/IMG_5716.jpg)
 ![](/assets/images/2020/05/IMG_5728.jpg)
 
-Менее приятные районы скучкованы вокруг вокзала, где компактно проживают трудовые мигранты и беженцы. В этих частях город больше напоминает столицу Германии и вызывает меньше приятных чувств. Но общего впечатления это не портит.
+Less pleasant neighborhoods cluster around the station, home to labor migrants and refugees. Those parts of the city feel more like Germany’s capital and provoke less positive feelings. But it doesn’t spoil the overall impression.
 
 ![](/assets/images/2020/05/IMG_5680.jpg)
 
-Мюнхен тоже прекрасно спланирован и обустроен. По моему мнению, это самый сбалансированный из крупных немецких городов.
+Munich is also excellently planned and equipped. In my opinion, it’s the most balanced among Germany’s large cities.
 
-## Дахау
-В получасе езды от Мюнхена на пригородном поезде U-bahn стоит пасторальный городок <a href="https://goo.gl/maps/YePcXnCaCosX8JYu6?ref=shouldgo.me">Дахау</a> с <a href="https://goo.gl/maps/SXGVUgiYbpFwPK5L7?ref=shouldgo.me">мемориалом</a> одному из самых страшных концлагерей в истории нацистской Германии. Это место впечатляет сильнее известного обоза Аушвиц-Биркенау в польском <a href="../love-poland/index.html">Освенциме</a>.
+## Dachau
+Just half an hour from Munich by suburban U-Bahn lies the pastoral town of <a href="https://goo.gl/maps/YePcXnCaCosX8JYu6?ref=shouldgo.me">Dachau</a>, home to a <a href="https://goo.gl/maps/SXGVUgiYbpFwPK5L7?ref=shouldgo.me">memorial</a> dedicated to one of the most harrowing concentration camps of Nazi Germany. This place leaves a deeper impression than the infamous Auschwitz-Birkenau convoy in Polish <a href="../love-poland/index.html">Oświęcim</a>.
 
 ![](/assets/images/2020/05/IMG_7506.jpg)
 
-Дахау был <a href="https://ru.wikipedia.org/wiki/Дахау_(концентрационный_лагерь)?ref=shouldgo.me">одним из первых</a> концентрационных лагерей, по модели которого возводили последующие. Он был построен ещё в 1933 году, задолго до войны. Сначала в нём содержались идеологические преступники, коммунисты, цыгане, гомосексуалисты и уголовники.
+Dachau was <a href="https://ru.wikipedia.org/wiki/Дахау_(концентрационный_лагерь)?ref=shouldgo.me">one of the very first</a> concentration camps — the model upon which later camps were built. It was constructed back in 1933, well before the war. Initially, it held ideological enemies, communists, Roma people, homosexuals, and criminals.
 
 ![](/assets/images/2020/05/IMG_7477.jpg)
 
-Позже — евреи, военнопленные и другие жертвы нацистского террора. Всего — почти 200 тысяч человек, которых изнуряли тяжёлой работой, ужасными условиями и античеловеческими медицинскими экспериментами с частым летальным исходом.
+Later came Jews, POWs, and other victims of Nazi terror. In total, nearly 200,000 people were imprisoned here — worn down by hard labor, horrific living conditions, and inhumane medical experiments that often ended in death.
 
 ![](/assets/images/2020/05/DSCF2864.jpg)
 
-Американские военные, освободившие лагерь в 1945, были настолько поражены картиной, что убили больше 120 сдавшихся солдат SS, ещё 40 голыми руками разорвали бывшие узники. Один из пулемётчиков открыл прямой огонь по пленным фашистам из тридцатого калибра.
+When American forces liberated the camp in 1945, they were so shocked by what they found that they executed over 120 surrendered SS guards. Another 40 were torn apart by former inmates. One of the machine gunners opened direct fire on the captured Nazis with a.30 caliber.
 
 ![](/assets/images/2020/05/DSCF2867.jpg)
 - ![](/assets/images/2020/05/DSCF2848.jpg)
 - ![](/assets/images/2020/05/DSCF2861.jpg)
 
-Немцы не прячут неприятные моменты истории, поэтому в главном корпусе открыт музей, подробно описывающий все ужасы концлагеря. Сохранены два барака узников, газовые печи, крипты и двойной периметр колючки. Вход на территорию и в музей — бесплатный.
+Germany doesn’t shy away from its darkest chapters — the main building hosts a museum that documents every horror of the camp in detail. Two prisoner barracks, the gas chambers, crypts, and the double barbed-wire perimeter are preserved. Entry to the grounds and museum is free.
 
 ![](/assets/images/2020/05/DSCF2863-1.jpg)
 
-Я провёл в Дахау весь световой день и увёз с собой горький привкус бессилия и несправедливости. Я не самый впечатлительный человек, но даже когда пишу эти строки, очень тяжело держать слёзы и глотать ком, навсегда застрявший где-то под кадыком.
+I spent the entire daylight hours in Dachau and left with a bitter taste of helplessness and injustice. I’m not the most impressionable person, but even writing these lines, it’s hard to hold back tears or swallow the lump that’s forever stuck somewhere beneath my Adam’s apple.
 
-## Фюссен, Швангау, Нойшванштайн
-Противоположный опыт — визит в «диснеевский» замок <a href="https://ru.wikipedia.org/wiki/Нойшванштайн?ref=shouldgo.me">Нойшванштайн</a>. Он находится у подножия Альпов в коммуне <a href="https://goo.gl/maps/epowFzxGV8FgQTot7?ref=shouldgo.me">Швангау</a> неподалёку от живописного городка Фюссен. До него можно добраться за пару часов прямым поездом с <a href="https://goo.gl/maps/i3z2QYFtiHyM3gWR7?ref=shouldgo.me">мюнхенского хауптбанхофа</a>.
+## Füssen, Schwangau, Neuschwanstein
+A completely different experience — a visit to the “Disney” castle of <a href="https://ru.wikipedia.org/wiki/Нойшванштайн?ref=shouldgo.me">Neuschwanstein</a>. It sits at the foot of the Alps in the commune of <a href="https://goo.gl/maps/epowFzxGV8FgQTot7?ref=shouldgo.me">Schwangau</a>, near the scenic town of Füssen. You can get there in a couple of hours by direct train from <a href="https://goo.gl/maps/i3z2QYFtiHyM3gWR7?ref=shouldgo.me">Munich Hauptbahnhof</a>.
 
 ![](/assets/images/2020/05/IMG_7415.jpg)
 
-Сам замок Нойшванштайн — фантазия инфантильного короля Людвига II. Истории за замком мало — он построен по капризу монаршей особы в конце XIX века на месте руин двух крепостей. Выдержан в средневековом стиле, пропущенном через призму романтизма.
+The castle itself is the brainchild of King Ludwig II’s whimsical imagination. There’s not much actual history behind it — it was built at the end of the 19th century on the ruins of two older fortresses purely because the monarch fancied it. Designed in a medieval style filtered through the lens of romanticism.
 
-Король провёл в замке всего 172 дня, после чего скоропостижно преставился. Проект был настолько амбициозным, что стройка вылезла из всех бюджетов и дедлайнов, ввергла коммуну в долги и не была полностью завершена по первоначальному макету.
+The king only spent 172 days in the castle before he suddenly passed away. The project was so ambitious it blew through all budgets and deadlines, plunged the commune into debt, and was never fully completed as originally planned.
 
-Издали замок впечатляет масштабом и гротескностью архитектуры на фоне гор и водопадов. Но вблизи и изнутри кажется пластиковым новоделом. Экскурсия по замку — самое большое разочарование. Лучше посмотреть на замок с узкого мостика <a href="https://goo.gl/maps/ifeMgA8ohmSgNWXP9?ref=shouldgo.me">Мариенбрюке</a>.
+From afar, the castle impresses with its scale and grotesque architecture set against mountains and waterfalls. But up close and inside, it feels like a plastic theme park replica. The guided tour was the biggest letdown. It’s much better to admire the castle from the narrow <a href="https://goo.gl/maps/ifeMgA8ohmSgNWXP9?ref=shouldgo.me">Marienbrücke</a> bridge.
 
 ![](/assets/images/2020/05/IMG_7408.jpg)
 ![](/assets/images/2020/05/DSCF2917.jpg)
 
-Внизу в долине расположена коммуна Швангау, озеро <a href="https://goo.gl/maps/vJRNt27PMGga9hTk9?ref=shouldgo.me">Альпензее</a> и замок <a href="https://ru.wikipedia.org/wiki/Хоэншвангау_(замок)?ref=shouldgo.me">Хоэншвангау</a>. Вечером в этой местности чувствуешь себя в настоящей сказке, главные герои которой — альпийские сопки и вековые сосны, которые хором хохочут над твоей скоротечностью.
+Down in the valley lie the commune of Schwangau, <a href="https://goo.gl/maps/vJRNt27PMGga9hTk9?ref=shouldgo.me">Alpsee</a> lake, and the <a href="https://ru.wikipedia.org/wiki/Хоэншвангау_(замок)?ref=shouldgo.me">Hohenschwangau</a> Castle. In the evening, the whole area feels like a fairytale, where the real stars are the alpine hills and ancient pines — laughing in unison at your fleeting existence.
 
 ![](/assets/images/2020/05/DSCF2955.jpg)
 ![](/assets/images/2020/05/IMG_7435.jpg)
@@ -149,69 +149,68 @@ image: /assets/images/2020/05/DSCF2908.jpg
 - ![](/assets/images/2020/05/DSCF2951.jpg)
 - ![](/assets/images/2020/05/DSCF2942.jpg)
 
-Городок <a href="https://goo.gl/maps/CWPCXtwhAHPeo6Fv8?ref=shouldgo.me">Фюссен</a>, из которого отбывает обратный поезд, тоже до рези в глазах красив и дразнит вычурными сграфитто своих фасадов. Это место, где хочется замереть и перестать жить в том ритме, к которому тебя приучила цивилизация.
+The town of <a href="https://goo.gl/maps/CWPCXtwhAHPeo6Fv8?ref=shouldgo.me">Füssen</a>, where the return train departs, is also painfully beautiful — flaunting its facades decorated with intricate sgraffito. It’s the kind of place that makes you want to stop in your tracks and forget the rhythm modern life has trained you to follow.
 
-## Нюрнберг
-Второй по численности город Баварии и столица Франконии. Именно такими представляешь себе немецкие города до первого визита в Германию. Готика красного кирпича, фахверковые постройки, извилистые улочки и башенки городской крепости.
+## Nuremberg
+The second-largest city in Bavaria and capital of Franconia. This is exactly how you picture German towns before ever visiting Germany. Red-brick Gothic, timber-framed houses, winding streets, and towers of the old city wall.
 
-![](/assets/images/2020/05/1A2F2A9A-109C-4233-9120-C55862B65239_1_105_c.jpg)
+![](/assets/images/2020/05/1A2F2A9A-109 °C-4233-9120-C55862B65239_1_105_c.jpg)
 ![](/assets/images/2020/05/IMG_3551.jpg)
 ![](/assets/images/2020/05/IMG_3631.jpg)
 
-Даже Адольф Гитлер считал Нюрнберг и его архитектуру воплощением германской культуры. Здесь прошёл первый съезд партии НСДАП и здесь же на знаменитом <a href="https://ru.wikipedia.org/wiki/Нюрнбергский_процесс?ref=shouldgo.me">Нюрнбергском процессе</a> судили главных нацистских преступников: Геринга, Бормана, Риббентропа и других.
+Even Adolf Hitler considered Nuremberg and its architecture a model of German culture. The first NSDAP rally was held here, and it’s also where the infamous <a href="https://ru.wikipedia.org/wiki/Нюрнбергский_процесс?ref=shouldgo.me">Nuremberg Trials</a> took place, sentencing top Nazi war criminals like Göring, Bormann, and Ribbentrop.
 
 ![](/assets/images/2020/05/IMG_3629.jpg)
 
-Здесь же в 1935 году по проекту главного нацистского архитектора Альберта Шпеера начали возводить <a href="https://ru.wikipedia.org/wiki/Территория_съездов_НСДАП_в_Нюрнберге?ref=shouldgo.me">огромный комплекс для съездов НСДАП</a>. Стройку так и не завершили, но даже в законсервированном виде <a href="https://goo.gl/maps/1pJ58k7HRDv3k815A?ref=shouldgo.me">Зал Собраний</a> поражает своим масштабом.
+In 1935, under plans by Nazi architect Albert Speer, they began building the <a href="https://ru.wikipedia.org/wiki/Территория_съездов_НСДАП_в_Нюрнберге?ref=shouldgo.me">massive rally grounds for the NSDAP</a>. The construction was never finished, but even in its incomplete state, the <a href="https://goo.gl/maps/1pJ58k7HRDv3k815A?ref=shouldgo.me">Congress Hall</a> stuns with its scale.
 
 ![](/assets/images/2020/05/IMG_3627.jpg)
 ![](/assets/images/2020/05/IMG_3625.jpg)
 
-Примерно так же (но несоизмеримо более приятно) своим масштабом удивляет местные рождественские ярмарки — одни из крупнейших в Германии. Каждый год на них съезжается больше двух миллионов туристов. И кажется, что все они собираются на <a href="https://goo.gl/maps/oP9b9UQU9NYALTDN7?ref=shouldgo.me">Хауптмаркте</a>.
+On a much more cheerful note, Nuremberg’s Christmas markets are just as grand in scale — among the biggest in Germany. Every year, over two million visitors flock to them. And it feels like they all end up at <a href="https://goo.gl/maps/oP9b9UQU9NYALTDN7?ref=shouldgo.me">Hauptmarkt</a>.
 
 ![](/assets/images/2020/05/IMG_3611.jpg)
 ![](/assets/images/2020/05/IMG_3643.jpg)
+![](/assets/images/2020/05/IMG_3604.jpg)
 
-![](/assets/images/2020/05/IMG_3604.jpg)Почему-то Нюрнберг запомнился мне меньше прочих немецких городов и не оставил однозначного впечатления. Но посетить его стоит.
+For some reason, Nuremberg left a less vivid memory than other German cities — it didn’t leave a clear impression. But it’s still very much worth visiting.
 
-## Франкфурт-на-Майне
-В отличие от Нюрнберга Франкфурт запомнился хорошо, но не с лучшей стороны. Пятый город Германии, один из крупнейших транспортных узлов Европы, город банкиров, небоскрёбов и дорогих авто. По совместительству — немецкая криминальная столица.
+## Frankfurt am Main
+Unlike Nuremberg, Frankfurt stuck in memory — though not in the best way. Germany’s fifth-largest city, one of Europe’s major transport hubs, a city of bankers, skyscrapers, and luxury cars. And at the same time — the crime capital of Germany.
 
 ![](/assets/images/2020/05/IMG_1865-1.jpg)
 ![](/assets/images/2020/05/IMG_1853.jpg)
 ![](/assets/images/2020/05/IMG_1983.jpg)
 ![](/assets/images/2020/05/IMG_1930-1.jpg)
 
-После войны город был почти полностью разрушен, но в отличие от Мюнхена власти восстановили лишь несколько исторических архитектурных групп. Остальное застроили высотками, за что город получил неофициальный топоним Майнхеттен (Манхеттен на Майне).
+After the war, Frankfurt was almost completely destroyed. But unlike Munich, the authorities chose to restore only a few historical buildings. The rest was built up with high-rises, earning the city the unofficial nickname “Mainhattan” — Manhattan on the Main River.
 
 ![](/assets/images/2020/05/IMG_1965.jpg)
 ![](/assets/images/2020/05/IMG_1974.jpg)
 ![](/assets/images/2020/05/IMG_3657.jpg)
 ![](/assets/images/2020/05/IMG_1976-1.jpg)
 
-Самый высокий небоскрёб — <a href="https://goo.gl/maps/hEeLppecQhJo2GeA7?ref=shouldgo.me">Коммерцбанк Турм</a> высотой 259 метров. За панорамой можно вознестись на <a href="https://goo.gl/maps/7BoQ462Aie6og4q2A?ref=shouldgo.me">Майн Тауер</a> — двухсотметровую стекляшку с лифтами, которые движутся на закладывающей уши скорости около 7 метров в секунду.
+The tallest skyscraper is the [Commerzbank Tower](https://goo.gl/maps/hEeLppecQhJo2GeA7?ref=shouldgo.me), standing at 259 meters. For a panoramic view, you can go up [Main Tower](https://goo.gl/maps/7BoQ462Aie6og4q2A?ref=shouldgo.me) — a 200-meter glass giant with elevators that shoot up at an ear-popping speed of 7 meters per second.
 
 ![](/assets/images/2020/05/IMG_3650.jpg)
 ![](/assets/images/2020/05/IMG_3654-2.jpg)
 
-Город живёт за счёт банков и логистики. После войны власти старательно улучшали транспортную инфраструктуру и сделали Франкфурт европейской логистической столицей. Высокий уровень преступности связан как раз с большим потоком контрабанды.
+The city lives off banking and logistics. After the war, the authorities focused heavily on improving transport infrastructure, and turned Frankfurt into Europe’s logistics capital. The high crime rate is mostly tied to the huge volume of smuggled goods passing through.
 
 ![](/assets/images/2020/05/IMG_1872.jpg)
 ![](/assets/images/2020/05/IMG_1812.jpg)
 ![](/assets/images/2020/05/IMG_1914.jpg)
 ![](/assets/images/2020/05/65EBB2B7-0F72-47FA-9D17-C5203DB7CE20_1_105_c.jpg)
 
-Если вас не впечатляют небоскрёбы, огромные вокзалы и аэропорты, люксовые кабриолеты, люди в дорогих костюмах, взвинченные цены, а также засилье иммигрантов и наркобарыг — делать во Франкфурте практически нечего. Я расставался с городом без сожалений.
+If you’re not into skyscrapers, massive train stations and airports, luxury convertibles, people in expensive suits, inflated prices, plus the overwhelming presence of immigrants and street dealers — there’s not much for you in Frankfurt. I left the city without any regrets.
 
-## Дрезден
-В Дрездене я тоже побывал ещё в 2012 году. Вернулся шесть лет спустя, но ничего не изменилось. Это всё такой же маленький городок с красивым целиком восстановленным историческим центром и богатым панельным наследием ГДР. Всё описано [в старом посте](/blog/dresden-dolls/).
+## Dresden
+I first visited Dresden back in 2012. Returned six years later — and nothing had changed. Still the same small city with a beautifully restored historical center and a solid GDR-era panel housing legacy. Everything’s already [covered in the old post](/blog/dresden-dolls/).
 
-Не имею добавить ничего интересного кроме горстки свежих фото, и поэтому спешно завершу свой пост, чтоб успеть отрефлексировать всё написанное по случаю недавнего семидесятипятилетия победы.
+Nothing much to add, except for a handful of fresh photos — so I’ll wrap this one up quickly, while there’s still time to reflect on everything I’ve written for the recent 75th anniversary of the victory.
 
 ![](/assets/images/2020/05/DSCF3260.jpg)
 ![](/assets/images/2020/05/DSCF3266.jpg)
 ![](/assets/images/2020/05/DSCF3284-1.jpg)
 
-Всех поздравляю с этим важным праздником и приглашаю в Германию, чтобы своими глазами увидеть, какой стала эта уничтоженная двумя войнами и разорванная двумя политическими полюсами страна.
-
-![](/assets/images/2020/05/0D85FD8F-997F-4BB6-81F6-BC6AADD9FDEB_1_105_c.jpg)
+Happy Victory Day to everyone. And I encourage you to visit Germany — to see for yourself what became of this country, once destroyed by two wars and split in half by two political systems.
