--- a/_i18n/en/_posts/2021-01-12-2k20.markdown
+++ b/_i18n/en/_posts/2021-01-12-2k20.markdown
@@ -1,170 +1,164 @@
 ---
+
 layout: post
-title: Полсотни снимков из локдауна
+title: Fifty Shades of Lockdown
 date: '2021-01-12 20:37:48'
 tags:
 - photo
 - notes
 - annual
 image: /assets/images/2021/01/DSCF3798.jpg
+
 ---
 
-Год, безусловно, был совершенно всратым, но воспоминаний накопилась куча. Вывалю их прямо здесь, чтобы спустя лета порыться в несвежем содержимом, утирая ностальгическую слезу с поседевших усов.
+The year was, without a doubt, an absolute mess — but it sure left a pile of memories. I’m dumping them all here so that years later, I can rummage through the stale contents while wiping a nostalgic tear off my graying mustache.
 
 ![](/assets/images/2021/01/DSCF3798.jpg)
 
-Лично мне жаловаться не приходится: изоляция прошла в Европе, между волнами заразы были короткие вылазки в соседние страны, годы цифрового номадства отлично подготовили к социальной аскезе и удалёнке, а все дорогие люди без потерь доползли до тазика с новогодним оливье. Короче, всё было сасно, но для порядка придётся немного поныть.
+Personally, I have nothing to complain about: years of digital nomadism turned out to be perfect prep for remote work and social asceticism. Everyone dear to me made it to the New Year’s Eve in one piece. So, all things considered, it was pretty great — but for tradition’s sake, I’ll throw in a bit of whining.
 
-## Прощание с Россией
+## Farewell to Russia
 
-2020 начался заурядно. Мы собрали друзей и отправились в «польские Альпы» ака [Татры](https://goo.gl/maps/fPVkFXmUJvpu8XEd7). Ребята катались на лыжах и бордах по высоким горам, а я колесил в синих санях по высоким градусам, поправляя разболтавшееся по случаю зимы настроение. На сдачу мы сняли авто и проведали замки разных стадий разложения, расположенные вдоль [Маршрута Орлиных Гнёзд](https://ru.wikipedia.org/wiki/Путь_Орлиных_Гнёзд).
+2020 started out quite uneventfully. We gathered some friends and headed to the “Polish Alps” aka the [Tatras](https://goo.gl/maps/fPVkFXmUJvpu8XEd7). The gang hit the slopes on skis and snowboards while I cruised around in a "blue sled", warming my winter mood with equally spirited beverages. Then we rented a car to check out some castles along the Trail of the Eagles' Nests.
 
 ![](/assets/images/2021/01/DSCF1334.jpg)
 ![](/assets/images/2021/01/DSCF1425.jpg)
 
-Дальше всё было настолько тухло, что сознание вернулось ко мне лишь в феврале, когда настала пора отправиться в Россию, чтобы продлить рабочие визы и повидать любимых людей из Москвы, Питера и родного Еката. РЖД довёз нас в обе стороны прекрасным поездом Москва — Прага, а сама Родина покатала на русских горках ностальгической меланхолии.
+Then everything went so dull that my memory only flickered back on in February, just in time for a trip to Russia to renew our work visas and see loved ones in Moscow, St. Petersburg, and my hometown of Yekaterinburg. Russian Railroad Company took us both ways on the wonderful Moscow–Prague train, while the Motherland took us on a rollercoaster of nostalgic melancholy.
 
 - ![](/assets/images/2021/01/DSCF1696.jpg)
 - ![](/assets/images/2021/01/DSCF1705.jpg)
 
-Самая яркая эмоция поездки — тревожное чувство, которое испытываешь, преодолевая кордоны серых ментов, заборы и рамки металлоискателей на Белорусском вокзале. Эта картина моментально вырывает из нежной еврогейской фантазии и возвращает в суровую действительность, в которой нужно быть начеку и ко всему относиться философски.
+The most vivid emotion of the trip? That uneasy feeling you get while pushing through police cordons, fences, and metal detectors at the Belarussian railaway station. That scene rips you right out of any gentle Euro-dream and plonks you back into a reality where you have to stay alert and philosophical about everything.
 
 - ![](/assets/images/2021/01/IMG_0921.jpg)
 - ![](/assets/images/2021/01/IMG_0964.jpg)
 
-По возвращении в Польшу нас ждал запоздалый новогодний подарок — Карты Побыту (временный вид на жительство) на два года. Заявление мы подали ещё в ноябре, а заветный пластик [получили только в марте](https://www.facebook.com/dima.afonin/posts/10221769052480238) — спустя почти четыре месяца (что по местным меркам довольно быстро). Зато теперь можем [жить в ЕС](/blog/love-poland/) без постоянных вылазок на родину за продлением рабочих виз.
+Back in Poland, a belated New Year’s gift was waiting for us — two-year Temporary Residence Cards (Karta Pobytu). We applied back in November and finally [got the plastic in March](https://www.facebook.com/dima.afonin/posts/10221769052480238) — almost four months later (which is actually considered fast by local standards). Now we can [live in the EU](/blog/love-poland/) without having to run back home for visa renewals.
 
-## Побег из Чехии
+## Escape from Czechia
 
-Чтобы отметить начало личной евроинтеграции и смыть горькое послевкусие большой родины, мы отправились любоваться пражской весной сквозь янтарь моравских вин. В Чехии я случался слишком часто, и даже написал [огромный пост](/blog/prague-czechia/) о жизни и о путешествиях по стране. Однако раз за разом возвращаюсь с огромным удовольствием, чего и вам советую.
+To celebrate our personal EU integration and rinse away the bitter aftertaste of the Motherland, we set out to enjoy Prague’s spring through a haze of Moravian wine. I’ve been to Czechia more times than I can count and even wrote [a huge post](/blog/prague-czechia/) about life and travels there. And yet I keep coming back — can’t recommend it enough.
 
 - ![](/assets/images/2021/01/DSCF1753.jpg)
 - ![](/assets/images/2021/01/DSCF1756.jpg)
- 
 - ![](/assets/images/2021/01/DSCF3376.jpg)
 - ![](/assets/images/2021/01/2C38DB67-F81A-4125-A827-F8CC8C0932A5.jpg)
 
-На дворе была середина марта, и ничто не предвещало беды. Коронавирус уже слал приветы во все концы, но по-прежнему казался не страшнее ОРВИ. Мы смеялись над ребятами в масках, тёрлись о китайских туристов на Староместкой и складывали туалетную бумагу в четыре слоя. Пока прекрасным пятничным вечером правительство Чехии не [объявило локдаун](https://www.facebook.com/dima.afonin/posts/10221829944082490).
+It was mid-March, and things still seemed fine. COVID was sending out feelers, but it felt no scarier than a seasonal cold. We were chuckling at folks in masks, brushing shoulders with Chinese tourists in Old Town Square, and folding our toilet paper into four-ply origami. Until one lovely Friday evening when the Czech government [announced lockdown](https://www.facebook.com/dima.afonin/posts/10221829944082490).
 
-Ночью мы успели выхватить билеты на последний автобус до Кракова, а уже утром весь международный транспорт отменили. Аренду авто моментально подорожала до €500 в сутки, а единственный выход, который нам предложил добрый сотрудник вокзала — ехать внутренним рейсом до польской границы, а дальше добираться пешком, «если вас пропустят пограничники».
+We managed to snag tickets on the last bus to Kraków that very night, but by morning, all international transport was suspended. Car rentals spiked to €500 a day, and the kindest offer we got from a station clerk was: take a local train to the Polish border and walk across — “if the guards let you through.”
 
 - ![](/assets/images/2021/01/IMG_1154.jpg)
 - ![](/assets/images/2021/01/IMG_1169.jpg)
 
-Так мы и сделали, совершив [увлекательный шпацер](https://www.facebook.com/dima.afonin/posts/10221843699946378) из милой чешской деревни [Наход](https://goo.gl/maps/neWPMzLsJobcBUX29) в польский спа-курорт [Кудова-Здруй](https://goo.gl/maps/xvEEeKRc7Y9rfRsQ8). Затем были поезда до Клодзко, Вроцлава и автобус до родного Кракова. Всего 14 часов в пути, в ситуации полнейшего хаоса и неопределённости, 15 километров на ногах, двое случайных попутчиков из Армении и Украины. Идеальное приключение.
+So we did exactly that — [took a charming walk](https://www.facebook.com/dima.afonin/posts/10221843699946378) from the cute Czech village of [Náchod](https://goo.gl/maps/neWPMzLsJobcBUX29) to the Polish spa town of [Kudowa-Zdrój](https://goo.gl/maps/xvEEeKRc7Y9rfRsQ8). Then took trains to Kłodzko, Wrocław, and a bus back home to Kraków. Fourteen hours of pure chaos and uncertainty, 15 km on foot, and two random travel buddies from Armenia and Ukraine. A perfect little adventure.
 
-## Изоляция в Кракове
+## Lockdown in Kraków
 
-Мы успели проскочить под самый занавес. На следующий день [Польша закрыла границы,](https://www.facebook.com/dima.afonin/posts/10221922263950429) и вернуться стало возможно только через двухнедельный карантин. Страна ввела одни из самых строгих ограничений во всём ЕС: отменила праздные прогулки, обязала носить маски на улице, закрыла общественные места вплоть до детских площадок и ввела часы для шопинга пенсионеров.
+The very next day, [Poland closed its borders](https://www.facebook.com/dima.afonin/posts/10221922263950429), and coming back a day later would require two weeks of quarantine. The country imposed some of the strictest restrictions in the EU — banning walks, mandating masks even outdoors, shutting down public spaces (including children's playgrounds), and reserving shopping hours for seniors.
 
 - ![](/assets/images/2021/01/DSCF1904.jpg)
 - ![](/assets/images/2021/01/DSCF3571.jpg)
 
-Краковяки принялись на удивление дисциплинированно соблюдать [все требования и рекомендации](https://www.facebook.com/dima.afonin/posts/10222009897341209), посему первая волна едва доползла до 500 дневных кейсов. Нам же оставалось сидеть дома и радоваться большой зелёной террасе с видом на весну. Поначалу, это было даже интересно — наконец посидеть на жопе после пары лет постоянных переездов.
+Krakowians started [following the rules surprisingly well](https://www.facebook.com/dima.afonin/posts/10222009897341209), and the first wave barely cracked 500 daily cases. We stayed home, basking in the joy of a spacious green terrace with a view of spring. At first, it was even exciting — finally a chance to sit still after years of constant travel.
 
 - ![](/assets/images/2021/01/DSCF2093.jpg)
 - ![](/assets/images/2021/01/IMG_0777.jpg)
 
-Внезапно появились деньги и время, чтобы облагородить быт маленькими радостями, вроде турника и комфортного рабочего кресла. Затем стало невыносимо скучно, и начались излишества, вроде телевизора и постоянных винных дегустаций (благодаря которым я в совершенстве овладел винным диалектом польского и открыл Weisser Mulatschak и Andert-Wein Rosè).
+Suddenly, there was time and money for little domestic joys — a pull-up bar, a comfy work chair. Then came the boredom, and then the indulgences — a TV, and ongoing wine tastings (thanks to which I mastered the Polish wine dialect and discovered Weisser Mulatschak and Andert-Wein Rosè).
 
 ![](/assets/images/2021/01/DSCF1847.jpg)
 ![](/assets/images/2021/01/DSCF3851.jpg)
 
-К лету ограничения ослабли. Несмотря на это, польское правительство перенесло президентские выборы (за которыми было действительно интересно наблюдать, хотя победил всё равно [кандидат от Единой России](https://www.facebook.com/dima.afonin/posts/10222106771403000)). Российские выборы новой конституции никто не переносил, и мы добросовестно [выразили своё нет](https://www.facebook.com/dima.afonin/posts/10223067168612330), хотя старательно избегали походов в любые общественные места.
+By summer, restrictions were loosened. Still, the Polish government postponed the presidential elections (which were quite a show to watch, even though the [conservative candidate](https://www.facebook.com/dima.afonin/posts/10222106771403000) still won). Meanwhile, Russia held its constitutional vote as planned — and we dutifully [voted “no”](https://www.facebook.com/dima.afonin/posts/10223067168612330), avoiding public spaces as much as possible.
 
 - ![](/assets/images/2021/01/DSCF2031.jpg)
 - ![](/assets/images/2021/01/DSCF2756.jpg)
- 
 - ![](/assets/images/2021/01/DSCF2195.jpg)
 - ![](/assets/images/2021/01/DSCF3426.jpg)
 
-Вторая волна началась в сентябре и докатилась до куда более удручающих 30 тысяч выявленных случаев в день. Польша со скрипом переварила такой наплыв заболевших, ограничения вернулись, и мы до сих пор лишены всех благ культурно-социального досуга, в том числе прогулок по улице без приросших к лицу масок и поездок в соседние страны.
+The second wave hit in September, peaking at a much gloomier 30,000 cases a day. Poland struggled to cope, restrictions came back, and we’re still cut off from most of life’s pleasures — including mask-free walks and quick hops to neighboring countries.
 
 ![](/assets/images/2021/01/DSCF3634.jpg)
 - ![](/assets/images/2021/01/DSCF3521.jpg)
 - ![](/assets/images/2021/01/DSCF3495.jpg)
 
-Весна в Кракове была изумительной — весь апрель цвели вишня, сакура и крокусы. Лето было долгим и жарким. Золотая осень плавно текла с октября по ноябрь. Но в декабре наступила мрачная срань с туманами, дождями и непроницаемым серым смогом. Снег так и не выпал, а мы впервые начали грустить, что город такой тихий и тесный.
+Spring in Kraków was stunning — April was full of cherry, sakura, and crocus blossoms. Summer was long and hot. Golden autumn stretched lazily from October through November. But then came the miserable grayness of December, with fogs, rain, and an impenetrable smog. No snow, and for the first time we started to feel down about how small and quiet the city felt.
 
 - ![](/assets/images/2021/01/DSCF1875.jpg)
 - ![](/assets/images/2021/01/DSCF3664-1.jpg)
 
-По какой-то одному Зевсу известной причине год выдался абсолютно всратым не только в смысле пандемической ебанины, но и в плане производства и потребления контента. Вспомнить практически нечего, остаётся только зарыть здесь эту текстовографическую капсулу времени с самым унылым в мире [топом книжек, фильмов, игр, песенок и подкастов](https://www.facebook.com/dima.afonin/posts/10224569826377835).
+## Work in the Comfort Zone
 
-## Работа в зоне комфорта
+The pandemic didn’t affect my professional life. The projects I’ve been working on have been remote for years, and they actually grew a bit in 2020. Our agency [OUT.AGENCY](http://out.agency) shipped a bunch of awesome websites and interfaces. We hired more people and started making [things in English](https://out.agency/en?fbclid=IwAR0SVIS82L-pwG6XFFG9ZUnd_eGPI8dqvVISz7XfFFbFyWG3naxtUK90nj8).
 
-На профессиональной деятельности пандемия не сказалась. Проекты, над которыми я работаю, давно живут на удалёнке, отлично себя чувствуют, и за 2020 год даже немного выросли. Агентство [OUT.AGENCY](http://out.agency) запилило кучу классных сайтов и интерфейсов. Мы потолстели в людях и начали делать [вещи на английском](https://out.agency/en?fbclid=IwAR0SVIS82L-pwG6XFFG9ZUnd_eGPI8dqvVISz7XfFFbFyWG3naxtUK90nj8) языке.
+Our meditation app [Practico](http://praktika.app) turned one year old. We found investors, hit our first $100k, released tons of new meditations, an [Android app](https://www.facebook.com/dima.afonin/posts/10224053198382458), and a bunch of other cool stuff. We even published two hit articles on VC.ru about our wins and fails — one in [April](https://vc.ru/services/118773-opyt-vmesto-deneg-kak-ne-zarabotat-na-mobilnom-prilozhenii-v-rossii?comments&fbclid=IwAR0GdLv4aOC47tMNBJ29h8xa69axjtg5sDh0j5zWeUtaOE3lCKvMGz819I0), and one in [September](https://vc.ru/services/156987-god-na-vode-i-hlebe-kak-delat-prilozhenie-na-svoi-i-ne-sdavatsya?fbclid=IwAR3QM_ruEJJIfPOnChRKV8OfiBpGbiPAvgycVbul1J2cVGMuV3cWnW0VGsA).
 
-Нашему приложению для медитации [Практика](http://praktika.app) исполнился год. Мы нашли инвестиции, заработали первый миллион (а к настоящему моменту намного больше), выпустили много новых медитаций, приложение [для андроида](https://www.facebook.com/dima.afonin/posts/10224053198382458) и кучу других классных штук. О своих успехах и провалах написали две кассовые статьи на VC.ru — [апрельскую](https://vc.ru/services/118773-opyt-vmesto-deneg-kak-ne-zarabotat-na-mobilnom-prilozhenii-v-rossii?comments&fbclid=IwAR0GdLv4aOC47tMNBJ29h8xa69axjtg5sDh0j5zWeUtaOE3lCKvMGz819I0) и [сентябрьскую](https://vc.ru/services/156987-god-na-vode-i-hlebe-kak-delat-prilozhenie-na-svoi-i-ne-sdavatsya?fbclid=IwAR3QM_ruEJJIfPOnChRKV8OfiBpGbiPAvgycVbul1J2cVGMuV3cWnW0VGsA).
+![Praktika — meditation without esoterics, now on Android too](/assets/images/2021/01/DSCF2964.jpg "Praktika — meditation without esoterics, now on Android too")
 
-![Практика — медитация без эзотерики, теперь и на Андроиде](/assets/images/2021/01/DSCF2964.jpg "Практика — медитация без эзотерики, теперь и на Андроиде")
+In the coming months, Praktika will go international — we’re prepping a release in three foreign languages. We’re also planning a full redesign and a ton of new content. It’s safe to say this next year will be a decisive one.
 
-В ближайшие месяцы Практика станет международным проектом — мы готовим релиз сразу на трёх иностранных языках. А ещё нас ждёт полнейший редизайн и гора контента. Можно сказать, что этот год будет решающим.
+## Travels in the Risk Zone
 
-## Путешествия в зону риска
-
-Несмотря на всё, мы успели посетить несколько старых и новых мест. Летом, пока внутренние границы ЕС были открыты, слетали на постковидную Сицилию. Сам остров показался грязным, враждебным и скучным (особенно [Катанья](https://goo.gl/maps/ByDR4ZDHLyB8PeE67), в которой мы имели глупость остановиться). Несколько раз было реально тревожно за свою безопасность.
+Despite everything, we still managed to visit a few places. In the summer, while internal EU borders were open, we flew to post-COVID Sicily. The island seemed dirty, hostile, and boring (especially [Catania](https://goo.gl/maps/ByDR4ZDHLyB8PeE67), where we foolishly stayed). A few times it genuinely felt unsafe.
 
 ![](/assets/images/2021/01/DSCF2945.jpg)
 - ![](/assets/images/2021/01/DSCF2779.jpg)
 - ![](/assets/images/2021/01/DSCF2870.jpg)
 - ![](/assets/images/2021/01/DSCF2900.jpg)
 
-Однако, соскучившиеся по туристам итальянцы немного разбавили картину. Особенно сторож замка [Ачи-Кастелло](https://goo.gl/maps/h2CFyyLw8MAm7HHQ6), который читал нам Бродского на итальянском и слушал мои декламации на русском, после чего называл нас исключительно Иосифом и Мариной. Прекрасная сицилийская кухня тоже оставила неизгладимый гастрономический след.
+Still, some locals — clearly missing tourists — helped brighten the picture. Especially the guard at [Aci Castello](https://goo.gl/maps/h2CFyyLw8MAm7HHQ6), who read Brodsky to us in Italian and called us “Iosif” and “Marina”. The amazing Sicilian cuisine left a serious impression too.
 
 - ![](/assets/images/2021/01/DSCF2790.jpg)
 - ![](/assets/images/2021/01/DSCF2911.jpg)
 
-В августе навестили друзей на Кипре. Остров давно стал родным, поэтому, вместо повторного осмотра всех достопримечательностей, мы грели кости на пляжах, дрифтили на вжареной бэхе, коллективно смотрели ютуб и переживали за ребят из Беларуси. Едва успели вернуться в Краков, как Кипр ввёл новый локдаун и ограничил авиасообщение.
+In August, we visited friends in Cyprus. The island feels like home by now, so instead of sightseeing, we just soaked in the sun, drifted around in a beat-up BMW, watched YouTube together, and followed the events in Belarus. We barely made it back to Kraków before Cyprus went into lockdown and shut down air travel.
 
 ![](/assets/images/2021/01/DSCF3039.jpg)
 - ![](/assets/images/2021/01/DSCF3083.jpg)
 - ![](/assets/images/2021/01/DSCF3152.jpg)
 - ![](/assets/images/2021/01/IMG_3743.jpg)
 
-Затем ещё раз съездили в Прагу (потому что нашли копеечные билеты в железнодорожном вагоне первого класса). Открыли для себя маленький город [Оломоуц](https://goo.gl/maps/hc9v5pESexHtfGjz5) в Моравии, а также поделённый между Чехией и Польшей [Цешин](https://goo.gl/maps/GnYqN5Yvpf23ArhaA), границу в котором можно пересечь прямо по пешеходному мосту (экспириенс интересный, но город довольно унылый).
+Later, we took another trip to Prague (because we found dirt-cheap first-class train tickets). We discovered the small city of [Olomouc](https://goo.gl/maps/hc9v5pESexHtfGjz5) in Moravia, and [Cieszyn](https://goo.gl/maps/GnYqN5Yvpf23ArhaA), split between the Czech Republic and Poland — you can literally cross the border on a footbridge (cool experience, but the town itself is pretty dull).
 
 ![](/assets/images/2021/01/DSCF2656.jpg)
 ![](/assets/images/2021/01/DSCF3459.jpg)
 - ![](/assets/images/2021/01/DSCF2753.jpg)
 - ![](/assets/images/2021/01/IMG_4006.jpg)
 
-Под конец года, когда все границы снова закрылись, нашёлся повод отведать ещё немного Польши. Встретили день моего рождения в том же горном курорте [Закопане](https://goo.gl/maps/mduqpuN29gkDjbnJ7), где начался наш 2020. Заехали в [Бельско-Бялу](https://goo.gl/maps/aYLRDeRYmY6B9awj8) (самое ушатанное место в стране соу фар) и [Катовице](https://goo.gl/maps/kDFUbjAvhXXfJSCn7) (столица заводов, хипстеров и киберспортивных турниров на западе Польши).
+At the end of the year, when all borders closed again, we took the chance to see more of Poland. We celebrated my birthday in the same mountain resort [Zakopane](https://goo.gl/maps/mduqpuN29gkDjbnJ7) where our 2020 began. We also visited [Bielsko-Biała](https://goo.gl/maps/aYLRDeRYmY6B9awj8) (the most beat-up city in the country so far) and [Katowice](https://goo.gl/maps/kDFUbjAvhXXfJSCn7) (a capital of factories, hipsters, and eSports tournaments in western Poland).
 
 - ![](/assets/images/2021/01/DSCF3864.jpg)
 - ![](/assets/images/2021/01/DSCF3981.jpg)
 
-Новый год, впервые лет за десять, отметили дома (правительство ввело комендантский час) — с салатиками и телевизором. А после отправились в [Гданьск](https://goo.gl/maps/GWs7wnXSyBRmADgP7) — город на Балтике, который внезапно стал [главным туристическим впечатлением](https://www.facebook.com/dima.afonin/posts/10224608344020752) последних лет и однозначно лучшим местом для утоления культурно-эстетической жажды во всей Польше.
+We celebrated New Year’s Eve at home for the first time in a decade (thanks to curfew) — with salads and TV. Then we headed to [Gdańsk](https://goo.gl/maps/GWs7wnXSyBRmADgP7) — a Baltic city that unexpectedly became [the top travel highlight](https://www.facebook.com/dima.afonin/posts/10224608344020752) of recent years, and easily the best place in Poland to satisfy your cultural and aesthetic thirst.
 
 - ![](/assets/images/2021/01/DSCF4031.jpg)
 - ![](/assets/images/2021/01/DSCF4046.jpg)
 
-Большую часть истории город кочевал от поляков к немцам, в результате чего разжился архитектурой, слабо напоминающей среднестатистическую польскую провинцию. К 1945 примерно 80% построек были срыты в ноль, но, в отличие от других городов, исторический центр восстановили очень аккуратно и почти целиком.
+Throughout its history, the city kept switching between Poland and Germany, and picked up an architecture that doesn’t resemble typical Polish towns at all. By 1945, around 80% of the buildings were destroyed, but unlike many others, Gdańsk’s historic center was carefully and almost entirely rebuilt.
 
 ![](/assets/images/2021/01/DSCF4225.jpg)
 ![](/assets/images/2021/01/DSCF4063.jpg)
 
-Осмотрели подавляюще массивную [Мариацкую Базилику](https://ru.wikipedia.org/wiki/Церковь_Девы_Марии_(Гданьск)) — второй по размерам (после Кёльнского) и крупнейший кирпичный храм Европы, крупнейший же и настолько же кирпичный средневековый [замок Тевтонского Ордена](https://ru.wikipedia.org/wiki/Мариенбург_(замок)) в [Мальборке](https://goo.gl/maps/Q3TWg1uD3oPGztWo9) и прочую готику вперемежку с фахверком, барокко и фасадно-архитектурными ансамблями имени скандинавского минимализма.
+We explored the overwhelmingly massive [St. Mary’s Basilica](https://en.wikipedia.org/wiki/St._Mary%27s_Church,_Gda%C5%84sk) — second only to Cologne in size and the largest brick church in Europe — and the equally brick-built [Teutonic Order Castle](https://en.wikipedia.org/wiki/Malbork_Castle) in [Malbork](https://goo.gl/maps/Q3TWg1uD3oPGztWo9). We also took in all sorts of gothic, baroque, and half-timbered architecture, with occasional splashes of Scandinavian-style minimalism.
 
-Гуляли под лёгким снежным бризом по песчаным пляжам Балтики — до [Гдыни](https://goo.gl/maps/8uVFuvEcf3WsAJ9V7) и [Сопота](https://goo.gl/maps/U3s6A7e4dxjTxqrq8), которые вместе с Гданьском образуют неделимое Trójmiasto (Тригород). Согревались вездесущим гжаньцем (глинтвейном) и острым рыбным супом с селёдочными бутербродами. Любовались ушатанным панельным гетто, рбитыми дорогами и следами бомбардировок.
+We walked the sandy Baltic beaches in a snowy breeze — all the way to [Gdynia](https://goo.gl/maps/8uVFuvEcf3WsAJ9V7) and [Sopot](https://goo.gl/maps/U3s6A7e4dxjTxqrq8), which together with Gdańsk form the inseparable Trójmiasto (Tri-city). We warmed up with endless grzaniec (mulled wine) and spicy fish soup with herring sandwiches. We admired the beat-up panel ghettoes, cracked roads, and WWII bomb scars.
 
 ![](/assets/images/2021/01/DSCF4187.jpg)
 
-Кроме непосредственно поездок, успел написать пяток неплохих фотобылин о путешествиях по Европе, которые случились в прошлой жизни:
+Besides the actual trips, I also wrote a handful of decent photo-essays about past travels around Europe:
+- [Living in Prague and traveling around Czechia](/blog/prague-czechia/)
+- [Traveling around Italy, when that still sounded normal](/blog/italia/)
+- [A little trip through France](/blog/petite-france/)
+- [75 photos from Germany](/blog/germania-75/)
+- [How I fell in love and moved to Poland](/blog/love-poland/)
 
-- [Как я жил в Праге и путешествовал по Чехии](/blog/prague-czechia/)
-- [Как я путешествовал по Италии, когда это ещё не звучало дико](/blog/italia/)
-- [Маленькое путешествие по Франции](/blog/petite-france/)
-- [75 фотографий из Германии](/blog/germania-75/)
-- [Как я влюбился и переехал в Польшу](/blog/love-poland/)
+## Back to 2021
 
-## Вернулись назад в 2021
+Technically, 2020 is over — but in practice, it continues. COVID restrictions in Poland are extended at least until the end of January. Restaurants and museums are still closed, masks are mandatory even outside, and vaccination has barely started — less than 10% will get a shot by spring. Neighboring countries are also locked down, and the Second World Wave isn’t going anywhere.
 
-Формально 2020 год закончился, но на практике всё продолжается. Ковидные рестрикции в Польше продлили, как минимум, до конца января. Рестораны и музеи на клюшке, маски нужно носить даже на улице, вакцинация едва началась и до весны осчастливит не больше 10% населения. Все соседние страны тоже закрыты, Вторая Мировая Волна не отступает.
+I have to admit that even though I’ve taken all the rules seriously, I’m tired of the strict regime — and I kind of envy how relaxed things are in Russia. I miss friends who used to break our voluntary hermit lifestyle with surprise visits. I want to hug everyone again. Cough in people’s faces. Without the fear of causing fatal offense.
 
-Вынужден признать, что, несмотря на максимально ответственное отношение к известным событиям, даже я устал от такого строгого режима и немного завидую российской распущенности. Скучаю по друзьям, которые раньше разбавляли наше добровольное отшельничество внезапными визитами. Хочу поскорее всех обнять и обкашлять без опасения нанести смертельную обиду.
-
-Очень надеюсь написать об этом в следующем годовом посте. До встречи!
-- [50 фотографий из 2019](/blog/2020/)
-- [50 фотокарточек из 2k18](/blog/2k18/)
-- [2017 в фотографиях](/blog/2017-in-50-photos/)
+Really hoping to write about that in next year’s annual post. See you then!
