--- a/_i18n/en/_posts/2024-12-24-malta-bd.md
+++ b/_i18n/en/_posts/2024-12-24-malta-bd.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Мальта — атипичная Европа
+title: "Malta: Not Your Typical Europe"
 date: '2024-12-24 18:28:00'
 tags:
 - travel
@@ -8,11 +8,11 @@ tags:
 image: /assets/images/2024/12/DSCF0004.jpg
 ---
 
-Отметил 35 лет на Мальте — провёл там трое суток, истоптал окрестности столичной Валлетты, обмазался рандомными текстами про историю и культуру, немного поел, и улетел без лишнего обременения. Но точно вернусь при первой возможности.
+Won’t pretend I’ve experienced much of Malta. Spent three full days there, strolled around the capital city of Valletta a bit, read some random stuff about its history and culture — hardly enough to draw any conclusions. But I’d happily revisit the first chance I get, and that’s more than I can say about most places.
 
 ![](/assets/images/2024/12/DSCF0051.jpg)
 
-Не буду делать вид, будто изучил этот остров насквозь, просто зашарю фотки и рандомные факты, которые выделяют его на фоне других европейских локаций.
+So, instead of playing a smart-ass travel blogger, I’ll just share a bunch of photos and random facts that make this place one of a kind. The rest is up to you!
 
 ![](/assets/images/2024/12/DSCF0059.jpg)
 - ![](/assets/images/2024/12/DSCF0133.jpg)
@@ -20,21 +20,21 @@ image: /assets/images/2024/12/DSCF0004.jpg
 - ![](</assets/images/2024/12/DSCF0046 1.jpg>)
 - ![](/assets/images/2024/12/DSCF9975.jpg)
 
-**Мальта — самое маленькое государство ЕС** — крохотный архипелаг, застрявший между Сицилией и Африкой, вмещает всего 300 квкм и 550к жителей.
+**Malta is the smallest EU country**, both by area and population. The archipelago covers around 300 square kilometers and is home to about 550k inhabitants.
 
 ![](/assets/images/2024/12/DSCF9996.jpg)
 ![](/assets/images/2024/12/DSCF0032.jpg)
 - ![](/assets/images/2024/12/DSCF9991.jpg)
 - ![](/assets/images/2024/12/DSCF9974.jpg)
 
-**Это одна из самых густонаселённых стран в мире** — примерно 95% основного острова занимает одна большая городская агломерация.
+**It’s one of the most densely populated** countries in the world, with over 95% of the main island (also called Malta, duh) being considered a single urban area.
 
 ![](/assets/images/2024/12/DSCF0005.jpg)
 ![](/assets/images/2024/12/DSCF0014.jpg)
 - ![](/assets/images/2024/12/DSCF9950.jpg)
 - ![](/assets/images/2024/12/DSCF9971.jpg)
 
-**Мальтийский язык — удивительный микс** Арабского, Итальянского и Английского, сформированный долгой историей перехода Мальты из рук в руки.
+**Maltese is a weird mix** of Arabic, Italian, English, and other languages, shaped by Malta’s long history of being fought over by just about every cocky prick in history.
 
 ![](/assets/images/2024/12/DSCF9964.jpg)
 - ![](</assets/images/2024/12/DSCF9977 1.jpg>)
@@ -42,13 +42,13 @@ image: /assets/images/2024/12/DSCF0004.jpg
 - ![](/assets/images/2024/12/DSCF9940.jpg)
 - ![](/assets/images/2024/12/DSCF9995.jpg)
 
-**Второй официальный язык — Английский**, а официальное дорожное движение — левостороннее — нетрудно угадать, кто был последним сюзереном.
+**English is the second official language**, so you don’t have to worry. But you might want to worry, because English 'driving on the left side' is official too.
 
 ![](/assets/images/2024/12/DSCF0018.jpg)
 - ![](/assets/images/2024/12/DSCF9931.jpg)
 - ![](/assets/images/2024/12/DSCF9979.jpg)
 
-**Мальта очень открыта к однополым отношениям, и очень закрыта к абортам**, хотя я всегда думал, что в этом случае — всё, либо ничего.
+**Malta is very open to same-sex relationships**, yet one of the two EU states where abortion is strictly prohibited. Always thought you could have either both or none!
 
 ![](/assets/images/2024/12/DSCF0004.jpg)
 - ![](/assets/images/2024/12/DSCF0020.jpg)
