--- a/_i18n/ru/_posts/2013-03-10-in-bruges.markdown
+++ b/_i18n/ru/_posts/2013-03-10-in-bruges.markdown
@@ -102,13 +102,13 @@ image: /assets/images/2017/09/IMG_1937.jpg
 ПС: Читайте множество интересных псто про предыдущие точки нашего путешествия, а я попытаюсь написать про второе пришествие в Прагу, а так же баррочное путешествие в солнечный [Чески Крумлов](http://en.wikipedia.org/wiki/%C4%8Cesk%C3%BD_Krumlov). Более того, я постараюсь сделать это не два месяца спустя, как это получилось с Брюгге.
 
 ## Читайте остальные посты евротрипа:
-- [Прага — путёвые советы](/blog/prague-t/)
-- [Прага — веселые картинки](/blog/prague-sights/)
-- [Прага — конечная станция](/blog/praga-the-end/)
-- [Дрезден со всех сторон](/blog/dresden-dolls/)
-- [Берлин — путёвые советы](/blog/berlin-tt/)
-- [Берлин — достопримечательности](/blog/berlin-sights/)
-- [Гамбург — портовый во всем](/blog/hamburg-ers/)
-- [Амстердам — мой самый скучный пост](/blog/amsterdamster/)
-- [Брюгге — как залечь на дно](/blog/in-bruges/)
-- [Крумлов — мать деревень чешских](/blog/cesky-krumlov/)
+- [Прага — путёвые советы](/ru/blog/prague-t/)
+- [Прага — веселые картинки](/ru/blog/prague-sights/)
+- [Прага — конечная станция](/ru/blog/praga-the-end/)
+- [Дрезден со всех сторон](/ru/blog/dresden-dolls/)
+- [Берлин — путёвые советы](/ru/blog/berlin-tt/)
+- [Берлин — достопримечательности](/ru/blog/berlin-sights/)
+- [Гамбург — портовый во всем](/ru/blog/hamburg-ers/)
+- [Амстердам — мой самый скучный пост](/ru/blog/amsterdamster/)
+- [Брюгге — как залечь на дно](/ru/blog/in-bruges/)
+- [Крумлов — мать деревень чешских](/ru/blog/cesky-krumlov/)
