--- a/_i18n/ru/_posts/2013-09-05-adalar.markdown
+++ b/_i18n/ru/_posts/2013-09-05-adalar.markdown
@@ -33,7 +33,7 @@ image: /assets/images/2017/08/IMG_4152.jpg
 ![Воды двух морей, путешествие по Босфору, Стамбул 2013](/assets/images/2017/08/IMG_4082.jpg)
 ![Воды двух морей, путешествие по Босфору, Стамбул 2013](/assets/images/2017/08/IMG_4282.jpg)
 
-В общем, ничего сверхъестественного, но сплавать стоит. Посмотрите с воды на [Румелихисар](/blog/2013/08/rumelihisari_sapphire_istanbul/ "Румелихисар и небоскреб Сапфир — две крепости Стамбула") и [Анадолухисар](http://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B0%D0%B4%D0%BE%D0%BB%D1%83%D1%85%D0%B8%D1%81%D0%B0%D1%80), отдохнете от сухопутнокрысости и насладитесь живительной прохладой.
+В общем, ничего сверхъестественного, но сплавать стоит. Посмотрите с воды на [Румелихисар](/ru/blog/2013/08/rumelihisari_sapphire_istanbul/ "Румелихисар и небоскреб Сапфир — две крепости Стамбула") и [Анадолухисар](http://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B0%D0%B4%D0%BE%D0%BB%D1%83%D1%85%D0%B8%D1%81%D0%B0%D1%80), отдохнете от сухопутнокрысости и насладитесь живительной прохладой.
 
 ## Принцевы острова — ослепительный дом изгоев
 
@@ -69,7 +69,7 @@ image: /assets/images/2017/08/IMG_4152.jpg
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4328.jpg)
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4335.jpg)
 
-Кстати, в отличие от Стамбула, [где овердевятьтысяч кошек](/blog/istanbul-south-european/ "Стамбул — южный берег Европейской части"), здесь предпочитают есть собак. Поэтому мирно спящих блохастых няшей на улицах в избытке. На потрясающе красивых тихих улицах, под сенью древ. Потрясающе красивых древ с великолепными кронами. Которые состоят из изящных ветвей и умопомрачительного цвета листьев. Которые едят невиданных форм жуки. Ну вы поняли.
+Кстати, в отличие от Стамбула, [где овердевятьтысяч кошек](/ru/blog/istanbul-south-european/ "Стамбул — южный берег Европейской части"), здесь предпочитают есть собак. Поэтому мирно спящих блохастых няшей на улицах в избытке. На потрясающе красивых тихих улицах, под сенью древ. Потрясающе красивых древ с великолепными кронами. Которые состоят из изящных ветвей и умопомрачительного цвета листьев. Которые едят невиданных форм жуки. Ну вы поняли.
 
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39b7.jpg)
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39c7.jpg)
@@ -102,13 +102,13 @@ image: /assets/images/2017/08/IMG_4152.jpg
 
 ## Прощание со Стамбулом
 
-Это последний пост про [наше июньское путешествие в Стамбул](/blog/tag/istanbul/). Меньше чем за неделю я полностью поменял свое мнение о столице павших империй. Бывший Константинополь — ослепительный город, который буквально мочит тебя своим блеском и нищетой, тут красота соседствует с тленом, а принудительное гостеприимство вызывает прямо противоположные друг другу чувства. Однако, я бы приехал сюда еще не раз, отчасти из-за того, что всего увидеть и познать не получилось, отчасти от самого жестокого из всех чувств — ностальгии, которая теперь точно будет преследовать меня везде, куда бы я ни направился. Ну а Принцевы острова — это просто гаттаби плейс. Всем Адалар. До новых путешествий!
+Это последний пост про [наше июньское путешествие в Стамбул](/ru/blog/tag/istanbul/). Меньше чем за неделю я полностью поменял свое мнение о столице павших империй. Бывший Константинополь — ослепительный город, который буквально мочит тебя своим блеском и нищетой, тут красота соседствует с тленом, а принудительное гостеприимство вызывает прямо противоположные друг другу чувства. Однако, я бы приехал сюда еще не раз, отчасти из-за того, что всего увидеть и познать не получилось, отчасти от самого жестокого из всех чувств — ностальгии, которая теперь точно будет преследовать меня везде, куда бы я ни направился. Ну а Принцевы острова — это просто гаттаби плейс. Всем Адалар. До новых путешествий!
 
 ![Мы и Босфор, Стамбул](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39ec.jpg)
 
 ## Полный цикл веселых приключений в Стамбуле:
-- [Стамбул — турецкое гостеприимство](/blog/istanbul-welcome/)
-- [Стамбул — мечети, гетто и котики](/blog/istanbul-south-european/)
-- [Стамбул — протестные достопримечательности](/blog/istanbul-taksim-galata/)
-- [Стамбул — крепости и небоскребы](/blog/rumelihisari_sapphire_istanbul/)
-- [Стамбул — Босфор и Принцевы острова](/blog/adalar/)
+- [Стамбул — турецкое гостеприимство](/ru/blog/istanbul-welcome/)
+- [Стамбул — мечети, гетто и котики](/ru/blog/istanbul-south-european/)
+- [Стамбул — протестные достопримечательности](/ru/blog/istanbul-taksim-galata/)
+- [Стамбул — крепости и небоскребы](/ru/blog/rumelihisari_sapphire_istanbul/)
+- [Стамбул — Босфор и Принцевы острова](/ru/blog/adalar/)
