--- a/_i18n/ru/_posts/2018-01-10-2k17.markdown
+++ b/_i18n/ru/_posts/2018-01-10-2k17.markdown
@@ -9,7 +9,7 @@ tags:
 image: /assets/images/2018/01/DSCF8769.jpg
 ---
 
-Когда-то я [умел фотографировать](https://shouldgo.ru/tag/photoblog/). Не снимал шедевры, конечно, и в числах Фибоначчи не разбирался. Просто рассматривал работы Корнблю, Брессона, Эрвитта, часами практиковался и пытался цитировать. Получалось сносно.
+Когда-то я умел фотографировать. Не снимал шедевры, конечно, и в числах Фибоначчи не разбирался. Просто рассматривал работы Корнблю, Брессона, Эрвитта, часами практиковался и пытался цитировать. Получалось сносно.
 
 ![DSCF8769](/assets/images/2018/01/DSCF8769.jpg)
 
@@ -127,7 +127,7 @@ image: /assets/images/2018/01/DSCF8769.jpg
 
 Я,&nbsp;наконец, определился с будущим блога. Здесь будут фоточки, посты с фотосоветами и фотоотчёты. Буду развиваться и самоулучшаться под вашим присмотром. Бизнесовый буллшит и техносрачи оставлю на [Фейсбуке](http://facebook.com/dima.afonin/posts/10211936969444307).
 
-О каждом городе из списка (и немного больше) напишу в отдельности. С последнего [тревелблога](http://shouldgo.ru/tag/travel/) локаций накопилось больше трёх десятков. Обещаю писать минимум один пост в месяц, чтобы всё успеть.
+О каждом городе из списка (и немного больше) напишу в отдельности. С последнего тревелблога локаций накопилось больше трёх десятков. Обещаю писать минимум один пост в месяц, чтобы всё успеть.
 
 ![THPORT](/assets/images/2018/01/THPORT.jpg)
 
