--- a/_i18n/ru/_posts/2018-10-23-kipr-1.markdown
+++ b/_i18n/ru/_posts/2018-10-23-kipr-1.markdown
@@ -9,7 +9,7 @@ tags:
 image: /assets/images/2018/10/DSCF5216.jpg
 ---
 
-В этому году дважды побывал на Кипре, объездил остров во всех направлениях, сделал кучу фоток и миллион заметок. Информации столько, что придётся писать на два поста. Первый — экспозиция и основные города. [Второй](/blog/kipr-2/) — тайные места и север острова.
+В этому году дважды побывал на Кипре, объездил остров во всех направлениях, сделал кучу фоток и миллион заметок. Информации столько, что придётся писать на два поста. Первый — экспозиция и основные города. [Второй](/ru/blog/kipr-2/) — тайные места и север острова.
 
 ![](/assets/images/2018/10/DSCF5216.jpg)
 
@@ -175,4 +175,4 @@ image: /assets/images/2018/10/DSCF5216.jpg
 
 ![Ета Афрдита](/assets/images/2018/10/DSCF9646-2.jpg)
 
-На этом пока всё. Читайте [второй пост](/blog/kipr-2/) о самых крутых местах, которые туристы совершенно напрасно игнорируют.
+На этом пока всё. Читайте [второй пост](/ru/blog/kipr-2/) о самых крутых местах, которые туристы совершенно напрасно игнорируют.
