--- a/_i18n/ru/_posts/2019-01-07-2k18.markdown
+++ b/_i18n/ru/_posts/2019-01-07-2k18.markdown
@@ -23,8 +23,8 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Исколесил остров во всех плоскостях и написал два поста о самых крутых местах. Прочтите, если намереваетесь с визитом:
 
-- [Зимовка на Кипре и путешествие по южной части](/blog/kipr-1/)
-- [Горный маршрут, ущелье и турецкая часть Кипра](/blog/kipr-2/)
+- [Зимовка на Кипре и путешествие по южной части](/ru/blog/kipr-1/)
+- [Горный маршрут, ущелье и турецкая часть Кипра](/ru/blog/kipr-2/)
 
 В этот раз планирую посетить немногочисленные оставшиеся достопримечательности, о которых тоже не премину написать.
 
@@ -32,7 +32,7 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Суммарно провёл в России всего 4 месяца. Окончательно понял, что не способен выжить в Москве. Съехал со съёмной квартиры и отправился искать новый дом. На память остался всего один пост и горстка фоток из столицы.
 
-- [Февраль в Москве](/blog/february-in-moscow/)
+- [Февраль в Москве](/ru/blog/february-in-moscow/)
 
 ![](/assets/images/2019/01/DSCF0102.jpg)
 ![](/assets/images/2019/01/DSCF9965.jpg)
@@ -41,8 +41,8 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 В родном Екатеринбурге случился дважды: весной и во время чемпионата по ногомячеству. Из ЕКБ уехал ещё в 2016, но уехать ЕКБ из себя не смог. Всегда рад случаю возвратиться к любимым местам и людям, привезти с собой пару постов и годных снимков.
 
-- [Длинная тень Екатеринбурга](/blog/ekb-longshadow/)
-- [Летотеринбург](/blog/summer-ekb/)
+- [Длинная тень Екатеринбурга](/ru/blog/ekb-longshadow/)
+- [Летотеринбург](/ru/blog/summer-ekb/)
 
 ![](/assets/images/2019/01/DSCF0624.jpg)
 ![](/assets/images/2019/01/DSCF3606.jpg)
@@ -67,13 +67,13 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Новый пост о Праге я не написал, но есть старые из 2012 года:
 
-- [Прага — типс энд трикс](/blog/prague-t/)
-- [Прага — веселые картинки](/blog/prague-sights/)
-- [Прага — the end of the line](/blog/praga-the-end/)
+- [Прага — типс энд трикс](/ru/blog/prague-t/)
+- [Прага — веселые картинки](/ru/blog/prague-sights/)
+- [Прага — the end of the line](/ru/blog/praga-the-end/)
 
 Объехали все интересные чешские города: Крумлов, Остраву, Карловы Вары, Будеёвице, Брно, Кутну Гору, но внимания стоят только первые три. Когда-нибудь я напишу о каждом, но теперь есть только старый пост про Чески Крумлов и немного фоток.
 
-- [Чески Крумлов — мать деревень чешских](/blog/cesky-krumlov/)
+- [Чески Крумлов — мать деревень чешских](/ru/blog/cesky-krumlov/)
 
 ![](/assets/images/2019/01/DSCF1061.jpg)
 ![](/assets/images/2019/01/DSCF0970.jpg)
@@ -97,9 +97,9 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Старые посты из Берлина и Дрездена:
 
-- [Дрезден со всех сторон](/blog/dresden-dolls/)
-- [Приезжаем в Берлин](/blog/berlin-tt/)
-- [Достопримечательный Берлин](/blog/berlin-sights/)
+- [Дрезден со всех сторон](/ru/blog/dresden-dolls/)
+- [Приезжаем в Берлин](/ru/blog/berlin-tt/)
+- [Достопримечательный Берлин](/ru/blog/berlin-sights/)
 
 ## Однажды Польша
 
@@ -122,9 +122,9 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Жизнь на чемоданах не очень хорошо отражается на долгосрочных проектах — на творчество не хватает то времени, то сил. Хотел много писать в блог, но выпустил только 8 постов. Кроме уже перечисленных, можно почитать:
 
-- [2017 в фотографиях](/blog/2017-in-50-photos/)
-- [Гид по Пхукету для неврастеников и декадентов](/blog/post-phuket/)
-- [Грязь и неон — путешествие по Азии](/blog/asia-trips/)
+- [2017 в фотографиях](/ru/blog/2017-in-50-photos/)
+- [Гид по Пхукету для неврастеников и декадентов](/ru/blog/post-phuket/)
+- [Грязь и неон — путешествие по Азии](/ru/blog/asia-trips/)
 
 В котле прокрастинации маринуется примерно 20 фотопостов о разных городах и странах, до которых планирую добраться в этом году, если не найду новой причины всё просрать.
 
@@ -181,7 +181,7 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 ![](/assets/images/2019/01/DSCF7453.jpg)
 
-Ссылку на прошлогодний пост тоже оставлю — специально для тех, кто любит копаться в чужой жизни: [50 фотографий из 2017](/blog/2k17/).
+Ссылку на прошлогодний пост тоже оставлю — специально для тех, кто любит копаться в чужой жизни: [50 фотографий из 2017](/ru/blog/2k17/).
 
 ![](/assets/images/2019/01/HbBrEaU-Q-ewRWzRm16Glw_thumb_180d.jpg)
 
