--- a/_i18n/ru/_posts/2020-05-12-germania-75.markdown
+++ b/_i18n/ru/_posts/2020-05-12-germania-75.markdown
@@ -18,7 +18,10 @@ image: /assets/images/2020/05/DSCF2908.jpg
 ## Берлин
 После первого визита в 2012 году я написал о Берлине два больших поста. Тогда столица Германии показалась грязной и враждебной, но атмосфера и артефакты новейшей истории очень впечатлили. Я привёз кучу фотографий рейхстага, Берлинской стены, муралов и мемориалов, которые до сих пор интересно пересматривать.
 
-<ul><li><a href="../berlin-tt/index.html">Первые впечатления о Берлине</a></li><li><a href="../berlin-sights/index.html">Достопримечательности Берлина</a></li></ul>За последние два года я возвращался в Берлин трижды, разглядел город с других сторон и сильно поменял своё отношение. Сегодня он кажется мне одним из самых уютных, комфортных и интересных мест в Европе, где каждый найдёт себе лайфстайл и досуг по душе.
+- [Первые впечатления о Берлине](/ru/blog/berlin-tt/)
+- [Достопримечательности Берлина](/ru/blog/berlin-sights/)
+
+За последние два года я возвращался в Берлин трижды, разглядел город с других сторон и сильно поменял своё отношение. Сегодня он кажется мне одним из самых уютных, комфортных и интересных мест в Европе, где каждый найдёт себе лайфстайл и досуг по душе.
 
 ![](/assets/images/2020/05/DSCF3085.jpg)
 
@@ -204,7 +207,7 @@ image: /assets/images/2020/05/DSCF2908.jpg
 Если вас не впечатляют небоскрёбы, огромные вокзалы и аэропорты, люксовые кабриолеты, люди в дорогих костюмах, взвинченные цены, а также засилье иммигрантов и наркобарыг — делать во Франкфурте практически нечего. Я расставался с городом без сожалений.
 
 ## Дрезден
-В Дрездене я тоже побывал ещё в 2012 году. Вернулся шесть лет спустя, но ничего не изменилось. Это всё такой же маленький городок с красивым целиком восстановленным историческим центром и богатым панельным наследием ГДР. Всё описано [в старом посте](/blog/dresden-dolls/).
+В Дрездене я тоже побывал ещё в 2012 году. Вернулся шесть лет спустя, но ничего не изменилось. Это всё такой же маленький городок с красивым целиком восстановленным историческим центром и богатым панельным наследием ГДР. Всё описано [в старом посте](/ru/blog/dresden-dolls/).
 
 Не имею добавить ничего интересного кроме горстки свежих фото, и поэтому спешно завершу свой пост, чтоб успеть отрефлексировать всё написанное по случаю недавнего семидесятипятилетия победы.
 
