--- a/_i18n/ru/_posts/2025-04-30-fuji-x100vi.markdown
+++ b/_i18n/ru/_posts/2025-04-30-fuji-x100vi.markdown
@@ -12,20 +12,20 @@ image: /assets/images/2025/04/DSCF1067.jpg
 
 ![](/assets/images/2025/04/DSCF1067.jpg)
 
-Фотографией я увлекся аж в 2008 года — когда взял свой первый кредит и купил свой первый зеркальный сапог 450д с тухлой китовой линзой 18-55. Древние [следы](/blog/the-yellowfield/) моих [первых](/blog/photowinter/) экспериментов с [камерой](/blog/unplugged_photo/) всё ещё можно [найти](/blog/trespassing-winter/) в [недрах](/blog/new_photostuff/) этого [блога](/blog/maydays/).
+Фотографией я увлекся аж в 2008 года — когда взял свой первый кредит и купил свой первый зеркальный сапог 450д с тухлой китовой линзой 18-55. Древние [следы](/ru/blog/the-yellowfield/) моих [первых](/ru/blog/photowinter/) экспериментов с [камерой](/ru/blog/unplugged_photo/) всё ещё можно [найти](/ru/blog/trespassing-winter/) в [недрах](/ru/blog/new_photostuff/) этого [блога](/ru/blog/maydays/).
 
 За всё время я попробовал много техники. Был 50D с уьлтрашироким 10-22 и телезумом 55-250, 5D Mark II с 24-105 L, куча расходных полтяшков, заёмные фишаи и 35мм объективы, пыха 580EX II и всякие DIY-аксессуры.
 
-По пути было много плёночки: Зениты, ФЭДы, Москва, Helga и любимая Mamiya ZE с жирным боке от Sekor 50mm f/2 и зерном от Ilford Pan 400. Немного плёночных фотографий даже оцифровалось [в отдельный блог-пост](/blog/film_photos_from_the_past/).
+По пути было много плёночки: Зениты, ФЭДы, Москва, Helga и любимая Mamiya ZE с жирным боке от Sekor 50mm f/2 и зерном от Ilford Pan 400. Немного плёночных фотографий даже оцифровалось [в отдельный блог-пост](/ru/blog/film_photos_from_the_past/).
 
 ![](/assets/images/2025/04/DSCF1141.jpg)
 ![](/assets/images/2025/04/DSCF0409.jpg)
 - ![](/assets/images/2025/04/DSCF0906.jpg)
 - ![](/assets/images/2025/04/DSCF0891.jpg)
 
-Потом я дропнул свой про-гир за любительский X-T10 с 18-55 из первой линейки беззеркалок Fuji, и пережил с ним 9 лет путешествий, начавшихся временным [переездом в Таиланд](/blog/post-phuket/), и увенчавшихся [переездом в Польшу на ПМЖ](/blog/love-poland/).
+Потом я дропнул свой про-гир за любительский X-T10 с 18-55 из первой линейки беззеркалок Fuji, и пережил с ним 9 лет путешествий, начавшихся временным [переездом в Таиланд](/ru/blog/post-phuket/), и увенчавшихся [переездом в Польшу на ПМЖ](/ru/blog/love-poland/).
 
-Пока умирал фуджик, успела случиться [пандемия COVID-19](/blog/2k20/), началась [полномасштабная война в Украине](/blog/fuck-war/), а айфоны научились чудесам вычислительной фотографии, но мне никогда не нравился их гладенький процесс и результат.
+Пока умирал фуджик, успела случиться [пандемия COVID-19](/ru/blog/2k20/), началась [полномасштабная война в Украине](/ru/blog/fuck-war/), а айфоны научились чудесам вычислительной фотографии, но мне никогда не нравился их гладенький процесс и результат.
 
 Поэтому я остался со старым телефоном, и выпросил в подарок новый Fuji X100VI — аппарат, который практически невозможно раздобыть, заделанный под ретро-дальномер с фиксом 35 f/2 и гибридным видоискателем.
 
