--- a/_i18n/en/_posts/2020-01-13-2k19.markdown
+++ b/_i18n/en/_posts/2020-01-13-2k19.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Фотоблог тридцатилетнего
+title: Shots From The Year I Hit Thirty
 date: '2020-01-13 01:15:52'
 tags:
 - photo
@@ -9,13 +9,13 @@ tags:
 image: /assets/images/2020/01/DSCF1031.jpg
 ---
 
-Прошедший год был одним из самых сложных: два больших переезда, интенсивная учёба, запуск мобильного приложения, тридцатилетие, куча невыполненных обещаний и пугающий экзистенциальный тупик. Оставлю этот пост, как предостережение будущему себе.
+Last year was one of the toughest: two big moves, intense studying, launching a mobile app, turning thirty, a bunch of broken promises, and a scary existential dead-end. I’ll leave this post here as a warning to my future self.
 
 ![](/assets/images/2020/01/DSCF1031.jpg)
 
-## Ещё один Новый год на Кипре
+## Another New Year in Cyprus
 
-Начало было легендарным: встретили год на любимом острове с любимыми людьми, сожгли одну крышу, попали в одну аварию, разбили один телефон и утопили один беспроводной наушник. А прямо перед новым годом сломался целый дом и моя жопа.
+The start was legendary: we welcomed the year on a favorite island with favorite people, burned down one roof, got into one accident, broke one phone, and drowned one wireless earbud. And just before the new year, an entire house broke down — and my ass too.
 
 ![](/assets/images/2020/01/DSCF7503.jpg)
 - ![](/assets/images/2020/01/DSCF7663.jpg)
@@ -25,30 +25,30 @@ image: /assets/images/2020/01/DSCF1031.jpg
 ![](/assets/images/2020/01/DSCF8558-6.jpg)
 ![](/assets/images/2020/01/DSCF8076-1.jpg)
 
-Вопреки географии, январь был холодным. Настолько, что жертвой пал масляный обогреватель, а горы щедрым слоем засыпал снег.
+Despite the geography, January was cold. So cold that an oil heater became a victim, and the mountains were generously covered in snow.
 
 ![](/assets/images/2020/01/DSCF7466-1.jpg)
 ![](/assets/images/2020/01/DSCF7984.jpg)
 
-## Кранч длинною в год
+## A Year-Long Crunch
 
-На Кипре мы провели почти три месяца — ждали документов на долгосрочные польские визы. Ленивый лайфстайл помог целиком сконцентрироваться на работе. Всё шло великолепно: Аутмаркетинг\* рос, появлялись новые контакты и проекты, а я решил получить новую профессию и пошёл на двенадцатимесячный курс веб-дизайна.
+We spent almost three months in Cyprus — waiting for our long-term Polish visas. The lazy lifestyle helped me fully focus on work. Everything was going great: Outmarketing* was growing, new contacts and projects were appearing, and I decided to learn a new profession and started a twelve-month web design course.
 
-В конце февраля мы закрыли легендарный sameshirt\*, который приносил кучу фана, но отнимал слишком много времени. А в марте взялись за новый проект — приложение для медитации Практика. Осенью мы снова заскучали и решились на ребрендинг основного бизнеса. Теперь out.agency занимается UI/UX-дизайном.
+At the end of February, we shut down the legendary sameshirt* — a project that brought tons of fun but took too much time. In March, we took on a new project — the meditation app Praktika. In the fall, we got bored again and went through a rebranding of the main business. Now out.agency focuses on UI/UX design.
 
-Эти метания постепенно превратились в аваланч проваленных дедлайнов и невыполненных целей. Накрыли так, что к концу года я чувствовал полное опустошение, апатию и отвращение к любым разговорам о работе и бизнесе. Глядя назад, должен признать, что от половины затей следовало отказаться.
+These swings gradually turned into an avalanche of missed deadlines and unfinished goals. It hit me so hard that by the end of the year, I felt completely drained, apathetic, and disgusted by any talk about work or business. Looking back, I have to admit I should’ve dropped half of those ventures.
 
-![Практика — приложение для медитации на русском](/assets/images/2020/01/DSCF0440.jpg)
+![Praktika — a meditation app in Russian](/assets/images/2020/01/DSCF0440.jpg)
 
-Спасибо Антону, Дане, Паше, Юле, и другим ребятам, которые тащили и тащат дела в те моменты, когда у меня не было сил.
+Thanks to Anton, Dana, Pasha, Yulia, and the others who carried the load when I had no strength left.
 
-## Переезд в Польшу
+## Moving to Poland
 
-Отдельным испытанием стала смена постоянной базы. В конце апреля, после короткого визита на родину, мы получили рабочие визы и завершили затянувшуюся релокацию. Под стук колёс поезда Москва — Варшава начался период, полный фрустрации и бюрократии.
+Changing our permanent base was a separate challenge. At the end of April, after a short visit home, we got our work visas and finally wrapped up the long relocation process. With the clatter of train wheels on the Moscow–Warsaw route began a period full of frustration and bureaucracy.
 
 ![](/assets/images/2020/01/DSCF9168.jpg)
 
-Пять месяцев прожили во Вроцлаве. Во время первого визита в Польшу бывший немецкий Бреслау в Нижней Силезии показался самым подходящим для жизни: мягкий климат, хорошая экология, четыре часа до Праги и Берлина. Что могло пойти не так?
+We lived in Wrocław for five months. During our first visit to Poland, the former German Breslau in Lower Silesia seemed like the perfect place to live: mild climate, good ecology, four hours to Prague and Berlin. What could go wrong?
 
 ![](/assets/images/2020/01/DSCF9331.jpg)
 - ![](/assets/images/2020/01/DSCF9409.jpg)
@@ -58,48 +58,48 @@ image: /assets/images/2020/01/DSCF1031.jpg
 - ![](/assets/images/2020/01/DSCF9243.jpg)
 - ![](/assets/images/2020/01/DSCF0245-1.jpg)
 
-Четвёртый по величине город Польши оказался слишком тесным и замкнутым в себе. Несмотря на бурное развитие и претензию на статус польской кремниевой долины, Вроцлав сильно отдавал провинцией, а местами напоминал Уралмаш времён моей молодости.
+The fourth largest city in Poland turned out to be too tight and closed off. Despite its rapid development and ambitions to be Poland’s Silicon Valley, Wrocław felt provincial and, in some spots, reminded me of Uralmash back in my youth.
 
 ![](/assets/images/2020/01/DSCF9049.jpg)
 ![](/assets/images/2020/01/DSCF9278-1.jpg)
 - ![](/assets/images/2020/01/DSCF9233-1.jpg)
 - ![](/assets/images/2020/01/DSCF0207.jpg)
 
-Насытившись этой малоприятной аналогией, мы решили переместить свою бренную жизнь в Краков — сильно бывшую столицу Речи Посполитой. Снова потеряли время, привычный быт, залог за квартиру и опять попали в петлю фрустрации и бюрократии.
+Sick of this unpleasant analogy, we decided to move our fragile lives to Kraków — the once mighty capital of the Polish-Lithuanian Commonwealth. We lost time again, our daily routine, the apartment deposit, and got caught in another loop of frustration and bureaucracy.
 
 ![](/assets/images/2020/01/DSCF1488.jpg)
 ![](/assets/images/2020/01/DSCF1071.jpg)
 
-К счастью, вторая попытка оказалась удачной, и мы обрели место, удовлетворяющий нашему стилю жизни (а ещё прекрасную квартиру с террасой и редким для местных широт центральным отоплением).
+Fortunately, the second attempt worked out, and we found a place that fits our lifestyle (plus a great apartment with a terrace and rare central heating for these parts).
 
 - ![](/assets/images/2020/01/DSCF0843.jpg)
 - ![](/assets/images/2020/01/DSCF1126.jpg)
 
-Единственная проблема: за годы скитаний я привык к кочевой жизни и чувствую постоянную потребность куда-нибудь переехать. Но в ближайшие годы сил на это уже не хватит.
+The only problem: after years of wandering, I got used to the nomadic life and feel a constant urge to move somewhere else. But in the coming years, I won’t have the energy for that anymore.
 
-Зато могу давать юридические и общеобразовательные консультации по релокации в Польшу для всех, кто имеет подобные интенции.
+At least I can offer legal and general advice on relocating to Poland for anyone interested.
 
-## Путешествия, друзья и одиночество
+## Travels, Friends, and Loneliness
 
-В перерывах между работой, учёбой и переездами, успели посетить несколько мест разной степени туристической привлекательности. Трижды побывали в Праге (и с каждым разом влюблялись в неё всё сильнее) и дважды — в Берлине (с аналогичным эффектом).
+Between work, study, and moving, we managed to visit several places with varying degrees of tourist appeal. We went to Prague three times (falling more in love with it every visit) and Berlin twice (with the same effect).
 
 ![](/assets/images/2020/01/DSCF8977.jpg)
 ![](/assets/images/2020/01/DSCF9873.jpg)
 - ![](/assets/images/2020/01/DSCF8979.jpg)
 - ![](/assets/images/2020/01/DSCF8983.jpg)
 
-Провели прекрасный июльский уикенд в Париже, который сгладил резко негативное отношение к французской столице, оставшееся после первого визита в 2014 году.
+We had a wonderful July weekend in Paris, which softened my harsh negative feelings toward the French capital left from my first visit in 2014.
 
 ![](/assets/images/2020/01/DSCF9635.jpg)
 - ![](/assets/images/2020/01/DSCF9567.jpg)
 - ![](/assets/images/2020/01/DSCF9651.jpg)
 
-Не обошли вниманием (но обделили любовью) город Будапешт, который показался скучным, неопрятным и слишком неевропейским.
+We didn’t overlook Budapest — though we didn’t fall in love either. It felt boring, untidy, and too non-European.
 
 ![](/assets/images/2020/01/DSCF0736.jpg)
 ![](/assets/images/2020/01/DSCF0634.jpg)
 
-Путешествовали по Польше. Начиная с Варшавы, которая с каждым разом нравилась всё меньше. Продолжая Катовице и Валбжихом, которые не разочаровали. Заканчивая замками и национальными парками, которые восхищали. В Польше невероятно красивая природа и отличная инфраструктура для приключений выходного дня.
+We traveled around Poland. Starting with Warsaw, which I liked less with every visit. Continuing with Katowice and Wałbrzych, which didn’t disappoint. Ending with castles and national parks that amazed me. Poland has incredibly beautiful nature and excellent infrastructure for weekend adventures.
 
 - ![](/assets/images/2020/01/DSCF0353.jpg)
 - ![](/assets/images/2020/01/DSCF0361.jpg)
@@ -112,25 +112,25 @@ image: /assets/images/2020/01/DSCF1031.jpg
 - ![](/assets/images/2020/01/DSCF9739-1.jpg)
 - ![](/assets/images/2020/01/DSCF9767-1.jpg)
 
-Жизнь интроверта на чужбине — это добровольная изоляция. Поэтому хочу сказать спасибо друзьям, которые приезжали в гости, звали в поездки и помогали растопить одиночество: Игоряну, Ване, Никите, Саше, Шасе, Элис, Серёге, Вите и его семье. И ещё куче людей, встречи с кем были спонтанными и приятными. Спасибо.
+An introvert’s life abroad is a voluntary isolation. So I want to say thanks to friends who visited, invited me on trips, and helped melt the loneliness: Igoryan, Vanya, Nikita, Sasha, Shasa, Alice, Seryoga, Vita and his family. And many others, whose spontaneous and pleasant meetings meant a lot. Thanks.
 
-По России скучаю, но возможное возвращение вижу в страшных снах.
+I miss Russia, but the thought of going back only visits me in nightmares.
 
-## Новое десятилетие
+## A New Decade
 
-Конец 2019 принёс новое десятилетие всему человечеству и мне лично — 21 декабря мне исполнилось тридцать. Придавленный грузом сложного года и символизмом возраста, я обнаружил себя в тупике, с которым в 2020 придётся как-то справиться.
+The end of 2019 brought a new decade for all humanity — and for me personally. On December 21st, I turned thirty. Burdened by the weight of a tough year and the symbolism of the age, I found myself stuck in a dead end, one I’ll have to figure out how to get through in 2020.
 
-День рождения отметил в любимой Праге с любимыми гуманойдами. Выпил все запасы моравского вина и рождественского сваржака.
+I celebrated my birthday in beloved Prague with my favorite humanoids. I drank all the Moravian wine and Christmas mulled beer I could find.
 
-![Никита — самый плёночный фотограф в моём мире](/assets/images/2020/01/File-00005.jpg)
+![Nikita — the most film-loving photographer in my world](/assets/images/2020/01/File-00005.jpg)
 
-Новый год встретил в горах и снова в отличной компании. Увидели снег, который в Кракове по сей день не выпал и не собирается.
+I welcomed the New Year in the mountains, once again with great company. We saw snow — the kind Krakow still hasn’t had and doesn’t seem to be getting anytime soon.
 
 ![](/assets/images/2020/01/DSCF1288.jpg)
 ![](/assets/images/2020/01/DSCF1368.jpg)
 - ![](/assets/images/2020/01/DSCF1388.jpg)
 - ![](/assets/images/2020/01/DSCF1275.jpg)
 
-На 2020 пожелаю себе побольше эссенциализма: разобраться с текущими делами, осознать свои желания и сконцентрироваться.
+For 2020, I wish myself more essentialism: to sort out the current mess, understand my desires, and focus.
 
 ![](/assets/images/2020/01/DSCF1356.jpg)
