--- a/_i18n/en/_posts/2020-04-26-italia.markdown
+++ b/_i18n/en/_posts/2020-04-26-italia.markdown
@@ -1,175 +1,176 @@
 ---
 layout: post
-title: Доковидные приключения в Италии
+title: "Italy: My Pre-Pandemic Adventures"
 date: '2020-04-26 19:07:30'
 tags:
 - travel
 - europe
 image: /assets/images/2020/04/IMG_6879-1.jpg
 ---
-В 2013 году я проехал шесть итальянских городов: Рим, Флоренцию, Геную, Болонью, Верону и Венецию. Хотел продолжить тур этим летом, но теперь вместе со всей планетой сижу дома, смотрю старые фотки и вспоминаю истории.
+
+Back in 2013, I traveled through six Italian cities: Rome, Florence, Genoa, Bologna, Verona, and Venice. I was hoping to continue the tour that summer, but now—just like the rest of the planet—I’m stuck at home, scrolling through old photos and remembering stories.
 
 ![](/assets/images/2020/04/IMG_6879-1.jpg)
 
-Присоединяйтесь. Слов будет мало, потому что и без них грустно.
+Feel free to join in. Not many words here—it’s melancholic enough without them.
 
-## Рим и Ватикан
+## Rome & Vatican
 
-У каждого есть свой стереотипный Рим. Одним в голову приходит усатый повар Джузеппе, другим — легионеры в кожном полудоспехе, третьим — пробка из веспа-скутеров, четвёртым — античные руины, энным — Одри Хепбёрн и Грегори Пек. И всё это существует.
+Everyone has their own stereotypical Rome. For some, it’s a mustachioed chef named Giuseppe; for others, leather-clad legionnaires; a swarm of Vespa scooters; ancient ruins; Audrey Hepburn and Gregory Peck. And all of that is real.
 
 ![](/assets/images/2020/04/IMG_5844-2.jpg)
 ![](/assets/images/2020/04/IMG_5957-1.jpg)
 ![](/assets/images/2020/04/IMG_5831-1.jpg)
 ![](/assets/images/2020/04/IMG_5950-1.jpg)
 
-Рим — настолько большой и концентрированный город, что в нём на самом деле помещается всё, что можно помыслить о Риме. Но из-за этого не остаётся места для сюрпризов. Когда приезжаешь сюда впервые, кажется, что ты уже знаешь город наизусть.
+Rome is so massive and densely packed that it really does contain everything you could imagine about Rome. But because of that, there’s no room left for surprises. When you visit for the first time, it feels like you already know the city by heart.
 
 ![](/assets/images/2020/04/IMG_5972-1.jpg)
 ![](/assets/images/2020/04/IMG_5974-1.jpg)
 
-В ноябре — дождливо. Несколько раз в день идёт ливень. Туристы разбегаются, на улице остаются только продавцы зонтов (стоят €20 и ломаются после первого раскрытия). После дождя небо затягивает плотным слоем птиц. Никогда не видел таких огромных стай.
+In November, it rains a lot. Several downpours a day. Tourists scatter, leaving only umbrella vendors on the streets (€20 each and broken after the first use). After the rain, the sky fills with dense flocks of birds. I’ve never seen anything like it.
 
 ![](/assets/images/2020/04/IMG_6031-2.jpg)
 ![](/assets/images/2020/04/IMG_6037-2.jpg)
 
-Роль музеев и галерей конвенционального искусства в Риме (как и в остальной Италии) играют базилики. А сам город — гигантская выставка архитектуры на пленэре. Есть красота на любой вкус (кроме готики, скупо представленной [одним-единственным фасадом](https://ru.wikipedia.org/wiki/Базилика_Святой_Марии_над_Минервой)).
+In Rome (as in the rest of Italy), churches take the place of conventional museums and galleries. The city itself is a giant open-air architecture exhibit. There’s beauty for every taste (except Gothic—only [one single façade](https://ru.wikipedia.org/wiki/Базилика_Святой_Марии_над_Минервой) represents it here).
 
 ![](/assets/images/2020/04/IMG_5906-2.jpg)
 ![](/assets/images/2020/04/IMG_6059-1.jpg)
 ![](/assets/images/2020/04/IMG_5982-1.jpg)
 ![](/assets/images/2020/04/IMG_6005-1.jpg)
 
-Все обязательные к посещению достопримечательности вы знаете. Дам рекомендацию бронировать билеты заранее и через интернет. Это дешевле и помогло мне скипнуть длинные очереди в кассы Колизея, Форума, Капитолия и Ватиканского музея.
+You already know all the must-see landmarks. One tip: book your tickets online in advance. It’s cheaper and helped me skip the long lines at the Colosseum, Forum, Capitoline Hill, and Vatican Museums.
 
 ![](/assets/images/2020/04/IMG_5869-2.jpg)
 ![](/assets/images/2020/04/IMG_6033-1.jpg)
 ![](/assets/images/2020/04/IMG_6034-1.jpg)
 ![](/assets/images/2020/04/IMG_6075-1.jpg)
 
-Другие советы: не надейтесь на светофоры и зебру. Успевайте покушать до полудня. Попробуйте весь ассортимент желатерий (мороженое). Зайдите на чудесную уличку [Via dei Coronari](https://goo.gl/maps/1qcoYvMNarEJ2sBa6). Погуляйте по [Трастевере](https://goo.gl/maps/9hkX7RqTh5FdfNLK9). Не проходите мимо острова [Тиберина](https://goo.gl/maps/jokAy3DvAb4rjqQk8).
+Other advice: don’t trust traffic lights or crosswalks. Eat before noon. Try every flavor in every gelateria. Stroll down the charming [Via dei Coronari](https://goo.gl/maps/1qcoYvMNarEJ2sBa6). Walk around [Trastevere](https://goo.gl/maps/9hkX7RqTh5FdfNLK9). Don’t skip the [Tiber Island](https://goo.gl/maps/jokAy3DvAb4rjqQk8).
 
-## Флоренция
+## Florence
 
-Когда спрашиваешь у итальянца что-то в духе "How to get to Florence", получаешь в ответ лишь недоуменное молчание. Всё потому что по-итальянски город называется Firenze, и это лишь отдалённо напоминает по звучанию привычную «Флоренцию».
+Ask an Italian something like “How do I get to Florence?” and you’ll get a blank stare. That’s because the city is called Firenze in Italian—which only vaguely resembles the familiar “Florence.”
 
 ![](/assets/images/2020/04/IMG_6104-1.jpg)
 ![](/assets/images/2020/04/IMG_6184-1.jpg)
 
-Точно так же от реальности отличался тот образ города, который сложился в моей голове до визита. Не могу сказать, что был разочарован, но ожиданий от родины [синдрома Стендаля](https://ru.wikipedia.org/wiki/Синдром_Стендаля) было определённо больше. Город красив безумно, но не безгранично.
+Same with the image I had in my head before visiting—it didn’t quite match reality. I wasn’t disappointed, but I definitely expected more from the birthplace of [Stendhal syndrome](https://ru.wikipedia.org/wiki/Синдром_Стендаля). The city is insanely beautiful—but not endlessly so.
 
 ![](/assets/images/2020/04/IMG_6128-1.jpg)
 ![](/assets/images/2020/04/IMG_6138-1.jpg)
 
-Когда устанете от сокровищниц ренессансного искусства и утомитесь вычурностью дуомского фасада, отойдите от центра и загляните на холм с [площадью Микеланджело](https://goo.gl/maps/zP5gmnnEgCjBynrcA) — здесь вы найдёте тихие сады и прекрасный вид на колыбель европейской культуры.
+When you’re worn out from Renaissance masterpieces and the flamboyant cathedral façade, head away from the center and climb the hill to [Piazzale Michelangelo](https://goo.gl/maps/zP5gmnnEgCjBynrcA). Quiet gardens and a sweeping view of the cradle of European culture await you there.
 
 ![](/assets/images/2020/04/IMG_6173-1.jpg)
 ![](/assets/images/2020/04/IMG_6268-1.jpg)
 
-Спустя семь лет воспоминания о Флоренции почти выветрились. Помню прекрасную коллекцию картин во дворце Медичи, узкие улицы, рыжую черепицу, оливковые сады в городских предместьях, толкотню туристов на мосту [Понте Веккьо](https://goo.gl/maps/z2VwAhqnMQBJwFn47) и ничего больше. Даже обидно.
+Seven years later, my memories of Florence have mostly faded. I remember a gorgeous art collection in the Medici Palace, narrow streets, red rooftops, olive groves on the city outskirts, and the tourist crush on [Ponte Vecchio](https://goo.gl/maps/z2VwAhqnMQBJwFn47)—and that’s it. A bit sad, really.
 
-## Генуя
+## Genoa
 
-Город на побережье [Лигурии](https://goo.gl/maps/DqY3xMQ8GrZXoxBR6), о котором я даже не знал, напротив, приятно удивил и понравился с первого взгляда. Я заехал сюда случайно по совету кого-то из друзей. Провёл всего один день, но запомнил навсегда.
+A city on the [Ligurian](https://goo.gl/maps/DqY3xMQ8GrZXoxBR6) coast I hadn’t even heard of before — and yet it instantly surprised and charmed me. I ended up here by chance on a friend’s recommendation. Spent just one day, but it stayed with me forever.
 
 ![](/assets/images/2020/04/IMG_6275-1.jpg)
 ![](/assets/images/2020/04/IMG_6341-1.jpg)
 
-Генуя — полная противоположность Флоренции. Неряшливый, грубый, эклектичный, портовый и совсем не расслабленный. Но при этом город как будто лучше тебя понимает и живёт на твоей волне.
+Genoa is the complete opposite of Florence. Messy, rough, eclectic, portside, and far from relaxed. But somehow the city seems to get you — it lives on your frequency.
 
 ![](/assets/images/2020/04/IMG_6314-1.jpg)
 ![](/assets/images/2020/04/IMG_6368-1.jpg)
 ![](/assets/images/2020/04/IMG_6385-1.jpg)
 ![](/assets/images/2020/04/IMG_6395-1.jpg)
 
-Когда-то давно Генуя была морской сверхдержавой, соперничала с Венецией и держала филиалы по всей Евразии — от Корсики до Крыма. Но потом пришла в упадок и стала глухой провинцией.
+Long ago, Genoa was a maritime superpower, rivaling Venice and keeping outposts all across Eurasia — from Corsica to Crimea. But over time, it fell into decline and became a quiet province.
 
 ![](/assets/images/2020/04/IMG_6351-1.jpg)
 ![](/assets/images/2020/04/IMG_6419-1.jpg)
 
-К прошлому столетию Генуя всё же вернула себе статус самого оживлённого порта в Средиземноморье, но туристами местный музей эклектичной архитектуры под открытым небом так и не облюбован.
+By the last century, Genoa had regained its title as the busiest port in the Mediterranean. Still, the city’s open-air museum of eclectic architecture remains largely overlooked by tourists.
 
-## Болонья
+## Bologna
 
-Это не только родина пасты с томатами и мясным фаршем, но и старейший университетский центр Европы. А ещё — самая скушная точка моего маршрута, которая не запомнилась ничем.
+Not just the birthplace of pasta with tomato and meat sauce, but also the oldest university hub in Europe. And, well… the dullest stop on my route — nothing really stood out.
 
 ![](/assets/images/2020/04/IMG_6474-1.jpg)
 
-Болонский университет открыли ещё в 1088 году. Он работает по сей день и делает Болонью магнитом для студентов из других регионов Италии и со всего мира.
+The University of Bologna was founded back in 1088. It’s still going strong and draws students from all over Italy and beyond.
 
 ![](/assets/images/2020/04/IMG_6478-1.jpg)
 
-Из-за большого количества молодёжи тысячелетний покой города нарушают повсеместные муралы и тэги, митинги сомнительного содержания и прочие атрибуты мятежной молодости.
+With so many young people around, the city’s thousand-year-old calm is constantly disrupted by murals, tags, questionable rallies, and all the usual symptoms of rebellious youth.
 
 ![](/assets/images/2020/04/IMG_6472-2.jpg)
 ![](/assets/images/2020/04/IMG_6482-2.jpg)
 
-Болонья известна кухней, невероятным количеством крытых пассажей и остатками невероятных средневековых башен. Но этого, увы, не хватило, чтобы город остался в памяти интересной дестинацией.
+Bologna is known for its food, endless covered arcades, and the remnants of once-great medieval towers. But somehow, none of that was enough for the city to leave a lasting impression.
 
-## Верона
+## Verona
 
-Пока город быстро приближался к окну поезда, я приближался к последней странице томика Ромео и Джульетта — произведения целиком вымышленного, но вымышленного в декорациях Вероны.
+As the city drew closer through the train window, I was nearing the final page of *Romeo and Juliet* — a story entirely fictional, but set in very real Verona.
 
 ![](/assets/images/2020/04/IMG_6629-1.jpg)
 ![](/assets/images/2020/04/IMG_6660-1.jpg)
 
-Весь город живёт вокруг великой шекспировской пьесы. Базилика Ромео и Джульетты, дом Капулетти, Балкон Джульетты и, конечно, могила Джульетты. Хотя и без этого в городе есть что посмотреть.
+The whole city revolves around Shakespeare’s great play. The Romeo and Juliet basilica, Juliet’s house, Juliet’s balcony — and of course, Juliet’s tomb. Still, even without all that, there’s plenty to see.
 
 ![](/assets/images/2020/04/IMG_6523-1.jpg)
 ![](/assets/images/2020/04/IMG_6640-1.jpg)
 - ![](/assets/images/2020/04/IMG_6563-1.jpg)
 - ![](/assets/images/2020/04/IMG_6618-1.jpg)
 
-Восхитительные мосты [Ponte Pietra](https://goo.gl/maps/fMNsWoq8md5KJXt86) и [Ponte di Castelvecchio](https://goo.gl/maps/AJZoqTswWCDLBSXG9). Отлично сохранившаяся [веронская арена](https://goo.gl/maps/Upvh6dspHG1dtPkVA). Замок [Кастельвеккио](https://g.page/MuseoCastelvecchio?share). Но лучшее — вид на город с высоты [Santuario della Nostra Signora di Lourdes](https://goo.gl/maps/KwEesPrGNNK8G57a9).
+Stunning bridges like [Ponte Pietra](https://goo.gl/maps/fMNsWoq8md5KJXt86) and [Ponte di Castelvecchio](https://goo.gl/maps/AJZoqTswWCDLBSXG9). The beautifully preserved [Verona Arena](https://goo.gl/maps/Upvh6dspHG1dtPkVA). The [Castelvecchio](https://g.page/MuseoCastelvecchio?share) fortress. But the best part — the view over the city from [Santuario della Nostra Signora di Lourdes](https://goo.gl/maps/KwEesPrGNNK8G57a9).
 
 ![](/assets/images/2020/04/IMG_6603-1.jpg)
 ![](/assets/images/2020/04/IMG_6609-1.jpg)
 ![](/assets/images/2020/04/IMG_6512-1.jpg)
 ![](/assets/images/2020/04/IMG_6602-1.jpg)
 
-Верона — маленький городок с чудесной атмосферой. Здесь можно отдохнуть от туристического ада более популярных городов Италии. Сюда можно заехать всего на день, и этого будет достаточно.
+Verona is a small town with a lovely vibe. A great place to escape the tourist madness of Italy’s more popular cities. You can just drop by for a day — and it’ll be enough.
 
-## Венеция
+## Venice
 
-За несколько дней в этом сыром промозглом тупике цивилизации, я испытал всё — от полного разочарования до гротескного восторга и экстатической радости. Сперва хотел побыстрее уехать, затем — остаться как можно дольше, теперь — поскорее вернуться.
+In just a few days in this damp, raw dead-end of civilization, I went through everything — from utter disappointment to grotesque delight and ecstatic joy. At first, I wanted to leave as quickly as possible. Then I wanted to stay as long as I could. Now — I just want to come back.
 
 ![](/assets/images/2020/04/IMG_6890-1.jpg)
 
-Весь город — лабиринт ржавых стен, которые непременно кончаются жидким агрегатным состоянием. Здесь невозможно ориентироваться даже по карте. Здесь ты всегда в тени и ждёшь момента, когда на ближайшей кампе тебя наконец скупым лучом местного солнца.
+The whole city is a maze of rusted walls that always end in a liquid state of matter. It’s impossible to navigate here, even with a map. You’re always in the shadows, waiting for that rare moment when a stingy ray of local sunlight finds you on some nearby campo.
 
 ![](/assets/images/2020/04/IMG_6745-2.jpg)
 ![](/assets/images/2020/04/IMG_6753-1.jpg)
 
-Здесь тебе всегда рады только 425 человек — это гондольеры, которые берут за свои услуги ровно 100 евро. Число этих людей неизменно. Если решишь вступить в их гильдию — придётся ждать чьей-то смерти или хотя бы увольнения.
+Only 425 people are truly glad to see you here — the gondoliers, who charge exactly 100 euros for their services. That number never changes. If you want to join their guild, you’ll have to wait for someone to die, or at least retire.
 
 ![](/assets/images/2020/04/IMG_6710-2.jpg)
 
-Здесь можно забыть, как выглядит машина или велосипед. Потому что передвигаться по островам лагуны можно только пешком. Между островами — на [вапоретто](https://ru.wikipedia.org/wiki/Вапоретто) или на водном такси. Ещё можно забыть о деревьях, равно как и о пустых улицах и площадях.
+You can forget what a car or bicycle looks like — getting around the lagoon’s islands is done entirely on foot. Between islands — on [vaporetto](https://en.wikipedia.org/wiki/Vaporetto) or water taxi. And forget about trees, too. Or empty streets and squares.
 
 ![](/assets/images/2020/04/IMG_6842-2.jpg)
 
-Здесь некуда спрятать глаза от невероятной красоты и полной гармонии естественного и искусственного. Прекрасно всё —&nbsp;от истерзаной голубями Пьяццы и до закутков Джуддеки. Здесь даже долгое ожидание вапоретто у холодной глади канала — самое красивое произведение в вашей жизни.
+There’s no place to look away from the overwhelming beauty and the complete harmony of the natural and the man-made. Everything is beautiful — from the pigeon-tortured Piazza to the quiet corners of Giudecca. Even the long wait for a vaporetto by the cold, still canal feels like the most beautiful moment of your life.
 
 ![](/assets/images/2020/04/IMG_6821-1.jpg)
 
-Венеция познакомила меня с Иосифом Александровичем Бродским. А он, как частый посетитель и почитатель местной эстетики, познакомил меня с той Венецией, которая навсегда влилась в память самым поэтичным местом на планете.
+Venice introduced me to Joseph Alexandrovich Brodsky. And he, as a frequent visitor and admirer of the local aesthetic, introduced me to the Venice that etched itself into my memory as the most poetic place on Earth.
 
 ![](/assets/images/2020/04/IMG_6687-1.jpg)
 
-Сам Иосиф Александрович лежит неподалёку — на острове-кладбище [Сан-Микеле](https://goo.gl/maps/Vn7TUCW6v1o9UyX37), которое нельзя не посетить. Кроме Сан-Микеле можно заплыть на остров [Мурано](https://goo.gl/maps/GNNuLuB5o5To2VDz9), известный смешными штуками из стекла. И обязательно — на красочный [Бурано](https://goo.gl/maps/joqhWXEy1CsAkYJy6) за невероятной красотой.
+Brodsky himself rests nearby — on the cemetery island of [San Michele](https://goo.gl/maps/Vn7TUCW6v1o9UyX37), which is an absolute must-visit. Besides San Michele, you can stop by [Murano](https://goo.gl/maps/GNNuLuB5o5To2VDz9), famous for its whimsical glass creations. And definitely make your way to the colorful [Burano](https://goo.gl/maps/joqhWXEy1CsAkYJy6) — for its unbelievable beauty.
 
 ![](/assets/images/2020/04/IMG_6765-1.jpg)
 ![](/assets/images/2020/04/IMG_6782-2.jpg)
 ![](/assets/images/2020/04/IMG_6790-2.jpg)
 ![](/assets/images/2020/04/IMG_6883-1.jpg)
 
-Венеция — город, которого не должно быть по всем законам здравого смысла. Вопреки этому, её кто-то выдумал и оставил здесь на века. Но лучше поторопиться — всё это великолепие на 118 островах может целиком уйти под воду уже в этом столетии.
+Venice is a city that shouldn’t exist by any logic or law of reason. And yet, someone imagined it — and left it here for centuries. But you better hurry — this wonder spread across 118 islands might vanish underwater before the century ends.
 
-## Лучи добра
+## Rays of Goodness
 
-Не стану вмешивать свой голос в нестройный хор людей, твердящих о величии и превосходстве италийских берегов над прочими туристическими направлениями. Но скажу, что Италия, какой я её помню — уникальное место и время. И ехать туда — обязательно.
+I won’t add my voice to the noisy chorus of people praising the greatness of the Italian coast over other travel destinations. But I will say this: the Italy I remember — was a unique place and a unique time. And going there — is a must.
 
 ![](/assets/images/2020/04/IMG_5992-1.jpg)
 
-Желаю стране скорейшего выздоровления, чтобы её пьяцца и кампы снова наполнились темпераментной речью, весёлым смехом, запахом выпечки и восхищёнными вздохами. Очень надеюсь, что эта пандемия не сможет сломать то самое — незаметное и незаменимое.
+I wish the country a speedy recovery, so that its piazzas and campos can once again fill with spirited voices, laughter, the smell of fresh pastries, and gasps of awe. I truly hope this pandemic won’t break what’s most precious — the quiet, irreplaceable things.
 
-До скорого!
+See you soon!
