--- a/_i18n/en/_posts/2022-03-10-fuck-war.markdown
+++ b/_i18n/en/_posts/2022-03-10-fuck-war.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Остановите войну!
+title: Stop the War!
 date: '2022-03-10 18:28:00'
 tags:
 - notes
@@ -8,36 +8,17 @@ tags:
 image: /assets/images/2022/03/DSCF6061.jpg
 ---
 
-Хотел написать большой пост на английском с разбором ситуации глазами россиянина для друзей из других стран. Но какой смысл? Сейчас важен взгляд украинского народа. И важно донести его до моих сограждан.
+These days, there’s nothing more unsettling than waking up as a citizen of Russia. I won’t pretend to understand how hard it is for the Ukrainian people, but at least they have a clear conscience. They didn’t start this war — we did, eight years ago. Maybe some of us opposed it, but none of us stopped it back then. Now, let’s do our best.
 
 ![](/assets/images/2022/03/DSCF6025.jpg)
-
-Украинский народ видит собственные слёзы. Я тоже не могу удержаться, когда обнимаю людей, родные которых сейчас под огнём, и когда пишу своим сотрудникам, которые сидят в убежище или пытаются выехать за кордон.
-
-![](/assets/images/2022/03/DSCF6053.jpg)
-
-Украинский народ видит смерть — своих людей, городов и надежд. Я не могу почувствовать этого в полной мере, но даже если мои страх, боль и отчаяние в сто раз меньше, я точно знаю, что ничего хуже не может быть.
-
 ![](/assets/images/2022/03/DSCF6061.jpg)
-
-Украинский народ видят гнев и ненависть — всего, что связано с Россией. Этого чувства не изменят санкции, извинения, отрицание. Но всё ещё можно не идти дальше, не падать глубже в эту пропасть безумия.
-
-![](/assets/images/2022/03/DSCF5971-2.jpg)
-
-Украинский народ видят гордость — за своих, которые отбивают атаки, помогают раненным и беженцам, проявляют мужество, человечность и сострадание в ситуации полного отчаяния. Этого сейчас не хватает нам всем.
-
 - ![](/assets/images/2022/03/DSCF6012-2.jpg)
 - ![](/assets/images/2022/03/DSCF6013.jpg)
 
-Я верю, что украинский народ увидят завтрашний день — мирный и благополучный. Только в этом случае мы тоже его увидим. И если вы молчите, опасаясь за своё будущее — подумайте, что это будущее может не наступить.
-
+![](/assets/images/2022/03/DSCF5995-2.jpg)
 ![](/assets/images/2022/03/DSCF6039.jpg)
-
-Я требую немедленно остановить войну — только так мы можем быть уверены, что наши глаза увидят будущее без слёз, смерти и ненависти. Без людоедов, убийц и узурпаторов. Без ядерной пыли и страшной неопределённости.
-
 - ![](/assets/images/2022/03/DSCF5970-2.jpg)
 - ![](/assets/images/2022/03/DSCF5984-2.jpg)
 
-Умоляю, сделайте что можете!
-
-![](/assets/images/2022/03/DSCF5995-2.jpg)
+![](/assets/images/2022/03/DSCF6053.jpg)
+![](/assets/images/2022/03/DSCF5971-2.jpg)
