--- a/_i18n/ru/_posts/2021-01-12-2k20.markdown
+++ b/_i18n/ru/_posts/2021-01-12-2k20.markdown
@@ -32,11 +32,11 @@ image: /assets/images/2021/01/DSCF3798.jpg
 - ![](/assets/images/2021/01/IMG_0921.jpg)
 - ![](/assets/images/2021/01/IMG_0964.jpg)
 
-По возвращении в Польшу нас ждал запоздалый новогодний подарок — Карты Побыту (временный вид на жительство) на два года. Заявление мы подали ещё в ноябре, а заветный пластик [получили только в марте](https://www.facebook.com/dima.afonin/posts/10221769052480238) — спустя почти четыре месяца (что по местным меркам довольно быстро). Зато теперь можем [жить в ЕС](/blog/love-poland/) без постоянных вылазок на родину за продлением рабочих виз.
+По возвращении в Польшу нас ждал запоздалый новогодний подарок — Карты Побыту (временный вид на жительство) на два года. Заявление мы подали ещё в ноябре, а заветный пластик [получили только в марте](https://www.facebook.com/dima.afonin/posts/10221769052480238) — спустя почти четыре месяца (что по местным меркам довольно быстро). Зато теперь можем [жить в ЕС](/ru/blog/love-poland/) без постоянных вылазок на родину за продлением рабочих виз.
 
 ## Побег из Чехии
 
-Чтобы отметить начало личной евроинтеграции и смыть горькое послевкусие большой родины, мы отправились любоваться пражской весной сквозь янтарь моравских вин. В Чехии я случался слишком часто, и даже написал [огромный пост](/blog/prague-czechia/) о жизни и о путешествиях по стране. Однако раз за разом возвращаюсь с огромным удовольствием, чего и вам советую.
+Чтобы отметить начало личной евроинтеграции и смыть горькое послевкусие большой родины, мы отправились любоваться пражской весной сквозь янтарь моравских вин. В Чехии я случался слишком часто, и даже написал [огромный пост](/ru/blog/prague-czechia/) о жизни и о путешествиях по стране. Однако раз за разом возвращаюсь с огромным удовольствием, чего и вам советую.
 
 - ![](/assets/images/2021/01/DSCF1753.jpg)
 - ![](/assets/images/2021/01/DSCF1756.jpg)
@@ -152,11 +152,11 @@ image: /assets/images/2021/01/DSCF3798.jpg
 
 Кроме непосредственно поездок, успел написать пяток неплохих фотобылин о путешествиях по Европе, которые случились в прошлой жизни:
 
-- [Как я жил в Праге и путешествовал по Чехии](/blog/prague-czechia/)
-- [Как я путешествовал по Италии, когда это ещё не звучало дико](/blog/italia/)
-- [Маленькое путешествие по Франции](/blog/petite-france/)
-- [75 фотографий из Германии](/blog/germania-75/)
-- [Как я влюбился и переехал в Польшу](/blog/love-poland/)
+- [Как я жил в Праге и путешествовал по Чехии](/ru/blog/prague-czechia/)
+- [Как я путешествовал по Италии, когда это ещё не звучало дико](/ru/blog/italia/)
+- [Маленькое путешествие по Франции](/ru/blog/petite-france/)
+- [75 фотографий из Германии](/ru/blog/germania-75/)
+- [Как я влюбился и переехал в Польшу](/ru/blog/love-poland/)
 
 ## Вернулись назад в 2021
 
@@ -165,6 +165,6 @@ image: /assets/images/2021/01/DSCF3798.jpg
 Вынужден признать, что, несмотря на максимально ответственное отношение к известным событиям, даже я устал от такого строгого режима и немного завидую российской распущенности. Скучаю по друзьям, которые раньше разбавляли наше добровольное отшельничество внезапными визитами. Хочу поскорее всех обнять и обкашлять без опасения нанести смертельную обиду.
 
 Очень надеюсь написать об этом в следующем годовом посте. До встречи!
-- [50 фотографий из 2019](/blog/2020/)
-- [50 фотокарточек из 2k18](/blog/2k18/)
-- [2017 в фотографиях](/blog/2017-in-50-photos/)
+- [50 фотографий из 2019](/ru/blog/2020/)
+- [50 фотокарточек из 2k18](/ru/blog/2k18/)
+- [2017 в фотографиях](/ru/blog/2017-in-50-photos/)
